--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,14 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-3 [端传媒｜哥伦比亚学潮现场：一场“撤资”行动，与美国高校言论自由的边界（节选）](/articles/cdt/341084.md)
+
+5-3 [极昼工作室｜农村老人，甘愿被低价旅行团「洗脑」](/articles/cdt/341086.md)
+
+5-3 [建设性意见｜梅大高速塌方到底埋了几辆车？非要挖出来才知道吗？](/articles/cdt/341088.md)
+
+5-3 [城市的地得｜有预谋的清场：哥大学生抗议行动的最后一刻](/articles/cdt/341090.md)
+
 5-2 [每日一语 2024.5.1](/articles/cdt/341109.md)
 
 5-2 [GS点｜平等视角：中国首家跨性别门诊——只有来诊者，没有患者](/articles/cdt/341114.md)
@@ -592,12 +600,4 @@
 3-31 [一个叫We的工作室｜当一位聋哑女性闯进外卖系统](/articles/cdt/342216.md)
 
 3-31 [月事骄傲PeriodPride｜上海《反家暴法》八周年报告：保护令核发难，亟需地方立法](/articles/cdt/342222.md)
-
-3-31 [【CDT月度视频】三月之声（2024）——向《四月之声》致敬](/articles/cdt/342226.md)
-
-3-30 [凤羽财经｜上海餐饮也不好做了？](/articles/cdt/342228.md)
-
-3-30 [每日一语 2024.3.29](/articles/cdt/342236.md)
-
-3-30 [后浪研究所｜北京“相亲特种兵”：一年相亲100次，仍然遇不到爱情](/articles/cdt/342240.md)
 
