--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+5-3 [马克龙在习近平访问前表示在欧洲在与中国的经济关系中必须捍卫欧洲“战略利益”](/articles/voa/1015937.md)
+
+5-3 [原声带·夏巢川 ：白纸运动后，我在看守所地狱般的日子](/articles/voa/1015938.md)
+
+5-3 [维吾尔流亡者的心声：亲情牵挂、正义探求与新疆监禁现状](/articles/voa/1015939.md)
+
+5-3 [美议员又推出一挺台立法：两党两院议员联手提新法案加强美台军工合作](/articles/voa/1015940.md)
+
 5-3 [佛罗里达州民主党人希望堕胎和大麻问题吸引年轻选民](/articles/voa/1015941.md)
 
 5-3 [世界新闻自由日，看北京如何在重大国际事件中争夺“话语权”](/articles/voa/1015942.md)
@@ -592,12 +600,4 @@
 4-21 [乌克兰对俄罗斯8个地区发动无人机攻击，3人丧生](/articles/voa/1016235.md)
 
 4-21 [美众院通过950亿美元援助乌克兰、以色列和台湾议案](/articles/voa/1016236.md)
-
-4-21 [中国在巴西和阿根廷之间的战略异动引起关注](/articles/voa/1016237.md)
-
-4-21 [港珠澳大桥开通五年仍难逃“鬼桥”命运](/articles/voa/1016238.md)
-
-4-21 [布林肯下周再访中国，美中紧张关系预计仍难实现突破改善](/articles/voa/1016239.md)
-
-4-21 [纽约时报:东京奥运会前23名中国游泳选手药检呈阳性，但仍获准参赛赢得奖牌](/articles/voa/1016240.md)
 
