--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-3 [美防长奥斯汀在夏威夷会晤太平洋盟国防长](/articles/voa/1015935.md)
+
+5-3 [走出北京的阴影：一位遭遇极度跨国骚扰的华人记者如何拒绝低头](/articles/voa/1015936.md)
+
 5-3 [马克龙在习近平访问前表示在欧洲在与中国的经济关系中必须捍卫欧洲“战略利益”](/articles/voa/1015937.md)
 
 5-3 [原声带·夏巢川 ：白纸运动后，我在看守所地狱般的日子](/articles/voa/1015938.md)
@@ -596,8 +600,4 @@
 4-21 [至少14名巴勒斯坦人死于西岸的暴力](/articles/voa/1016233.md)
 
 4-21 [马尔代夫将在中印竞争的阴影下举行选举投票](/articles/voa/1016234.md)
-
-4-21 [乌克兰对俄罗斯8个地区发动无人机攻击，3人丧生](/articles/voa/1016235.md)
-
-4-21 [美众院通过950亿美元援助乌克兰、以色列和台湾议案](/articles/voa/1016236.md)
 
