--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-3 [每日一语 2024.5.2](/articles/cdt/341077.md)
+
 5-3 [张3丰的世界｜维护时代的来临](/articles/cdt/341082.md)
 
 5-3 [端传媒｜哥伦比亚学潮现场：一场“撤资”行动，与美国高校言论自由的边界（节选）](/articles/cdt/341084.md)
@@ -598,6 +600,4 @@
 3-31 [老爸讲科学｜叶哲泰的原型叶企孙，中国物理学界一代宗师](/articles/cdt/342212.md)
 
 3-31 [36氪｜香港买房，起价500万的中产退路](/articles/cdt/342213.md)
-
-3-31 [一个叫We的工作室｜当一位聋哑女性闯进外卖系统](/articles/cdt/342216.md)
 
