--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-3 [为结束战争 乌克兰情报高官: 终需与俄罗斯进入谈判](/articles/voa/1015931.md)
+
+5-3 [发表新冠病毒基因序列的中国病毒学家张永振抗议后重返实验室](/articles/voa/1015932.md)
+
 5-3 [台湾在新任总统就职前处戒备状态 应对解放军越趋频繁的行动](/articles/voa/1015933.md)
 
 5-3 [无国界记者公布年度世界新闻指数：中国倒数第八，关押记者人数仍居全球之首](/articles/voa/1015934.md)
@@ -596,8 +600,4 @@
 4-21 [沙特“未来新城”争取中国资金](/articles/voa/1016229.md)
 
 4-21 [南中国海情势紧张之际 中国举办西太平洋海军论坛，29国代表参加](/articles/voa/1016230.md)
-
-4-21 [台湾感谢美众院通过援助议案 称其展示了美对台“坚若磐石”的支持](/articles/voa/1016231.md)
-
-4-21 [乌克兰、以色列、台湾对美国众议院通过援助法案表示感谢，中俄反对](/articles/voa/1016232.md)
 
