--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-3 [血染西南印度洋 報告揭中國遠洋漁業剝削實錄](/articles/dw/1025699.md)
+
 5-3 [習近平訪法前夕 馬克宏批中國不尊重貿易規則](/articles/dw/1025700.md)
 
 5-2 [绿党前主席：德国政府隐瞒来自中国的黑客袭击](/articles/dw/1025701.md)
@@ -598,6 +600,4 @@
 4-7 [客座评论：中国互联网企业是高科技公司吗？](/articles/dw/1025997.md)
 
 4-7 [为何数千尼泊尔人替俄罗斯打仗？](/articles/dw/1025998.md)
-
-4-7 [神秘失踪的十大珍宝](/articles/dw/1025999.md)
 
