--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+5-3 [日法同意启动军队《相互准入协议》谈判，扩大安全网建构](/articles/voa/1015926.md)
+
+5-3 [香港基本法23条后又一外媒撤离《华尔街日报》亚洲总部迁往新加坡](/articles/voa/1015927.md)
+
+5-3 [中国威胁日益严重下 奥斯汀与澳日菲防长会面 批评中国在南中国海的“不负责任行为](/articles/voa/1015928.md)
+
+5-3 [新西兰外长称关切中国在太平洋日益增多的破坏安全行动](/articles/voa/1015929.md)
+
 5-3 [缅甸危机能否成为美中合作的新领域？](/articles/voa/1015930.md)
 
 5-3 [为结束战争 乌克兰情报高官: 终需与俄罗斯进入谈判](/articles/voa/1015931.md)
@@ -592,12 +600,4 @@
 4-22 [俄军乌东攻势受挫，恰索夫亚尔镇仍掌控在乌军手中](/articles/voa/1016224.md)
 
 4-21 [中国青年“掉头转向”入乡就业 难与更难的抉择](/articles/voa/1016225.md)
-
-4-21 [中国驻美大使谢锋哈佛演讲，遭学生活动人士三度抗议打断](/articles/voa/1016226.md)
-
-4-21 [美众院投票强制TikTok产权易手，否则将在美国市场被禁](/articles/voa/1016227.md)
-
-4-21 [以伊交火会否引发更大范围的中东战争？先了解一下关键“狠角色”真主党](/articles/voa/1016228.md)
-
-4-21 [沙特“未来新城”争取中国资金](/articles/voa/1016229.md)
 
