--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-3 [台湾称多架中国军机飞越台海中线](/articles/dw/1025693.md)
+
 5-3 [纳瓦尔娜亚获2024年德国之声言论自由奖](/articles/dw/1025694.md)
 
 5-3 [压力太大 中国媒体对亚洲新闻奖“望而却步”](/articles/dw/1025695.md)
@@ -598,6 +600,4 @@
 4-7 [德国通过“空中桥梁”向加沙提供援助](/articles/dw/1025991.md)
 
 4-7 [意大利将赶超德国 成为欧洲经济强国？](/articles/dw/1025992.md)
-
-4-7 [德国考虑代孕合法化 为何引起争议？](/articles/dw/1025993.md)
 
