--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-4 [“福建舰”航母海试 分析: 将威胁美台军事战略部署](/articles/voa/1015918.md)
+
+5-4 [欧盟委员会：接受反补贴调查的三家中国车企提供的资料不足](/articles/voa/1015919.md)
+
+5-4 [卡梅伦：乌克兰有权使用英国武器攻击俄罗斯境内目标，莫斯科：如遭到攻击将进行报复](/articles/voa/1015920.md)
+
 5-3 [美日澳菲防长聚焦南中国海吓阻中国](/articles/voa/1015921.md)
 
 5-3 [最新台湾新闻自由度排名上升8位，名列全球第27名](/articles/voa/1015922.md)
@@ -594,10 +600,4 @@
 4-22 [美菲年度军演之际 中国警告各国称反对秀肌肉的炮舰外交](/articles/voa/1016216.md)
 
 4-22 [布林肯加强外交周旋 美军在加沙地带再空投人道救援物资](/articles/voa/1016217.md)
-
-4-22 [内塔尼亚胡威胁攻击拉法以解救哈马斯可能扣在那里的人质](/articles/voa/1016218.md)
-
-4-22 [TikTok对美国众院通过可能将其禁止的法案提出言论自由关切](/articles/voa/1016219.md)
-
-4-22 [中国驻加拿大大使丛培武离任](/articles/voa/1016220.md)
 
