--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-4 [加拿大官方调查结果：发现外国干涉选举的证据，但投票结果并未受影响](/articles/voa/1015914.md)
+
 5-4 [流亡商人郭文贵助理王雁平开审前在纽约联邦法庭对逾10亿美元串谋欺诈罪指控承认有罪](/articles/voa/1015915.md)
 
 5-4 [从战略支援部队到信息支援部队 习近平的决定令人费解](/articles/voa/1015916.md)
@@ -598,6 +600,4 @@
 4-22 [聿文视界：美中军费比较，谁在穷兵黩武](/articles/voa/1016212.md)
 
 4-22 [岸田文雄向靖国神社供奉祭品引发中国和韩国不满](/articles/voa/1016213.md)
-
-4-22 [中国多地推住房“以旧换新” 分析:恐难逆转楼市困局](/articles/voa/1016214.md)
 
