--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+5-4 [历史性的飞行：美空军部长乘人工智能战斗机起飞体验空战](/articles/voa/1015910.md)
+
+5-4 [美官员：中国洗钱组织十年前不为人知，今天是全球洗钱活动的主导力量](/articles/voa/1015911.md)
+
+5-4 [美日澳菲防长第二次会晤，印太抗中“小分队”渐成形？](/articles/voa/1015912.md)
+
+5-4 [特朗普的可能回归重新燃起了韩国的核辩论](/articles/voa/1015913.md)
+
 5-4 [加拿大官方调查结果：发现外国干涉选举的证据，但投票结果并未受影响](/articles/voa/1015914.md)
 
 5-4 [流亡商人郭文贵助理王雁平开审前在纽约联邦法庭对逾10亿美元串谋欺诈罪指控承认有罪](/articles/voa/1015915.md)
@@ -592,12 +600,4 @@
 4-23 [广东近日持续暴雨，多地洪灾提早到来](/articles/voa/1016208.md)
 
 4-22 [美国商务部长：华为最新智能手机芯片远没有美国芯片先进](/articles/voa/1016209.md)
-
-4-22 [德国逮捕三名涉嫌为中国从事间谍活动的德国公民](/articles/voa/1016210.md)
-
-4-22 [中国一季度财政收入和税收收入均同比下降](/articles/voa/1016211.md)
-
-4-22 [聿文视界：美中军费比较，谁在穷兵黩武](/articles/voa/1016212.md)
-
-4-22 [岸田文雄向靖国神社供奉祭品引发中国和韩国不满](/articles/voa/1016213.md)
 
