--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-4 [中国火箭将巴基斯坦月球卫星送入太空](/articles/voa/1015906.md)
+
 5-4 [一名美国众议员因涉阿塞拜疆的受贿指控而被起诉](/articles/voa/1015907.md)
 
 5-4 [拜登世界新闻自由日发表声明：所有被监禁记者都应获释](/articles/voa/1015908.md)
@@ -598,6 +600,4 @@
 4-23 [台湾发生一系列地震，最强为里氏6.3级](/articles/voa/1016204.md)
 
 4-23 [TikTok会把欧洲下一代导入歧途吗？](/articles/voa/1016205.md)
-
-4-23 [两名英国人涉嫌为中国从事间谍工作被伦敦警方起诉](/articles/voa/1016206.md)
 
