--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-4 [法国维吾尔人: 巴黎欢迎习近平到访，如被马克龙“打了一巴掌”](/articles/voa/1015903.md)
+
 5-4 [美国中情局长与哈马斯将于开罗展开加沙停火谈判](/articles/voa/1015904.md)
 
 5-4 [欧中贸易阴云不散，习近平访欧面临多重挑战](/articles/voa/1015905.md)
@@ -598,6 +600,4 @@
 4-23 [美国务院公布年度人权报告，列出全球人权面对的紧迫挑战](/articles/voa/1016201.md)
 
 4-23 [欧洲因儿童风险可能停止TikTok新的奖励应用](/articles/voa/1016202.md)
-
-4-23 [异议人士掀“跳机”浪潮 中国人再次能走就走](/articles/voa/1016203.md)
 
