--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-4 [土耳其：加沙永久停火前，全面中止与以色列的贸易](/articles/voa/1015902.md)
+
 5-4 [法国维吾尔人: 巴黎欢迎习近平到访，如被马克龙“打了一巴掌”](/articles/voa/1015903.md)
 
 5-4 [美国中情局长与哈马斯将于开罗展开加沙停火谈判](/articles/voa/1015904.md)
@@ -598,6 +600,4 @@
 4-23 [推特上的中国：驻美大使谢锋哈佛校园宣传北京治理模式遭批评](/articles/voa/1016200.md)
 
 4-23 [美国务院公布年度人权报告，列出全球人权面对的紧迫挑战](/articles/voa/1016201.md)
-
-4-23 [欧洲因儿童风险可能停止TikTok新的奖励应用](/articles/voa/1016202.md)
 
