--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-4 [电竞男生去世受关注 网民：热度盖过梅大高速塌方](/articles/dw/1025686.md)
+
 5-4 [俄罗斯和乌克兰都在使用违禁武器](/articles/dw/1025687.md)
 
 5-4 [欧洲大选：德国选民最关注移民议题](/articles/dw/1025688.md)
@@ -598,6 +600,4 @@
 4-8 [採訪受阻是常態 外國駐華記者仍舉步維艱](/articles/dw/1025984.md)
 
 4-8 [一分钟看懂尼加拉瓜为何起诉德国](/articles/dw/1025985.md)
-
-4-8 [王文濤晤在歐中企 否認電動車靠補貼佔優勢](/articles/dw/1025986.md)
 
