--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+5-4 [美空军部长乘AI战机参与模拟空战](/articles/dw/1025682.md)
+
+5-4 [客座評論：兩岸春不暖花不開與「抗中三長」](/articles/dw/1025683.md)
+
+5-4 [若特朗普胜选将会再次支持台湾？](/articles/dw/1025684.md)
+
 5-4 [“排外”导致经济困境？拜登言论惹恼日本印度](/articles/dw/1025685.md)
 
 5-4 [电竞男生去世受关注 网民：热度盖过梅大高速塌方](/articles/dw/1025686.md)
@@ -594,10 +600,4 @@
 4-8 [海牙国际法院能做什么？](/articles/dw/1025980.md)
 
 4-8 [国际法庭就德国协助以色列种族灭绝指控开始听证](/articles/dw/1025981.md)
-
-4-8 [美国向以色列提供了哪些军事援助？](/articles/dw/1025982.md)
-
-4-8 [去风险不碍做生意?在华德企的“中国战略”](/articles/dw/1025983.md)
-
-4-8 [採訪受阻是常態 外國駐華記者仍舉步維艱](/articles/dw/1025984.md)
 
