--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-5 [休斯敦准备抗击风暴造成的洪水泛滥](/articles/voa/1015891.md)
+
 5-5 [布林肯：尽管存在中国的影响力，但美国仍为太平洋岛国做出贡献](/articles/voa/1015892.md)
 
 5-5 [中国再提“君子协定”，专家：中方无证据只能任由杜特尔特去说](/articles/voa/1015893.md)
@@ -598,6 +600,4 @@
 4-23 [台湾东部余震不断 2起里氏规模6以上 3栋建物倒塌](/articles/voa/1016189.md)
 
 4-23 [坎贝尔：美国将鼓励印太国家和北约加强合作](/articles/voa/1016190.md)
-
-4-23 [世界反兴奋剂机构坚持当年做出的允许药检阳性中国游泳运动员参加东京奥运会的决定](/articles/voa/1016191.md)
 
