--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-5 [法国化妆品产业寻求中国撤销进口规定](/articles/voa/1015889.md)
+
 5-5 [俄军炸平乌克兰东部顿涅茨克地区的村庄](/articles/voa/1015890.md)
 
 5-5 [休斯敦准备抗击风暴造成的洪水泛滥](/articles/voa/1015891.md)
@@ -598,6 +600,4 @@
 4-23 [美国国会推进援助法案 重振乌克兰与美国安全合作](/articles/voa/1016187.md)
 
 4-23 [朝鲜官媒称在金正恩指导下进行了首次核反击综合训练](/articles/voa/1016188.md)
-
-4-23 [台湾东部余震不断 2起里氏规模6以上 3栋建物倒塌](/articles/voa/1016189.md)
 
