--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-5 [每日一语 2024.5.4](/articles/cdt/341021.md)
+
 5-5 [剥洋葱people｜火袭大礼堂](/articles/cdt/341035.md)
 
 5-5 [黑噪音｜鲁迅怎样证明自己不是境外势力？](/articles/cdt/341036.md)
@@ -598,6 +600,4 @@
 4-1 [玖奌杂货铺｜动辄指责穿和服、赏樱花是“精日”的，从此可以闭嘴了](/articles/cdt/342165.md)
 
 4-1 [【404帖子】钟国知声｜是谁把巨款打给了俄罗斯？](/articles/cdt/342170.md)
-
-4-1 [【404文库】匿名网友｜“指明方向”考](/articles/cdt/342172.md)
 
