--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-5 [调查：德国人对电动车兴趣下降](/articles/dw/1025680.md)
+
+5-5 [ACEA：欧盟电动车充电桩严重不足](/articles/dw/1025681.md)
+
 5-4 [美空军部长乘AI战机参与模拟空战](/articles/dw/1025682.md)
 
 5-4 [客座評論：兩岸春不暖花不開與「抗中三長」](/articles/dw/1025683.md)
@@ -596,8 +600,4 @@
 4-8 [耶伦：不让“中国冲击波”重演 摧毁美国工业](/articles/dw/1025978.md)
 
 4-8 [泽连斯基：美国国会再不放行援乌计划 乌克兰将会失败](/articles/dw/1025979.md)
-
-4-8 [海牙国际法院能做什么？](/articles/dw/1025980.md)
-
-4-8 [国际法庭就德国协助以色列种族灭绝指控开始听证](/articles/dw/1025981.md)
 
