--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 5-5 [每日一语 2024.5.4](/articles/cdt/341021.md)
 
+5-5 [悦尔像素｜600万人跪着忍受折磨：不可治愈的“穷人病”](/articles/cdt/341032.md)
+
 5-5 [卖杏花｜感谢黄色新闻，让重大事故又暖心又好看](/articles/cdt/341033.md)
 
 5-5 [剥洋葱people｜火袭大礼堂](/articles/cdt/341035.md)
@@ -598,6 +600,4 @@
 4-1 [知灼｜该怎么医治这个“生病”的社会](/articles/cdt/342161.md)
 
 4-1 [罗翔说刑法｜愚人节随想](/articles/cdt/342163.md)
-
-4-1 [玖奌杂货铺｜动辄指责穿和服、赏樱花是“精日”的，从此可以闭嘴了](/articles/cdt/342165.md)
 
