--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-5 [强调「和平通行权」 德外长不排除军舰穿越台海](/articles/dw/1025674.md)
+
 5-5 [重振香港旅游业 如何吸引内地游客成挑战](/articles/dw/1025675.md)
 
 5-5 [德国为下一次大流行病做好准备了吗？](/articles/dw/1025676.md)
@@ -598,6 +600,4 @@
 4-9 [中俄齊抗西方制裁 王毅：反對「築牆設壘」](/articles/dw/1025972.md)
 
 4-9 [馬英九訪北京稱「靈魂震撼」　馬習會仍未定](/articles/dw/1025973.md)
-
-4-8 [台积电获美国商务部补贴66亿美元](/articles/dw/1025974.md)
 
