--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-5 [“流亡也不安全” 洛杉矶举行《异见者》观影及示威活动，揭示并抗议中共跨国镇压](/articles/voa/1015880.md)
+
 5-5 [巴拿马举行大选 新任政府将面临与中国关系等国内外多项议题](/articles/voa/1015881.md)
 
 5-5 [习近平重提西部大开发 分析:老调重弹，难扭转内忧外患](/articles/voa/1015882.md)
@@ -598,6 +600,4 @@
 4-23 [美军印太司令阿奎利诺：中国在“经济衰退”期仍扩充军备令人担忧](/articles/voa/1016178.md)
 
 4-23 [中国外交部官员谈布林肯访华，称美“顽固推进遏华战略”](/articles/voa/1016179.md)
-
-4-23 [欧洲议会一名德国议员的助理涉嫌中国间谍案被捕](/articles/voa/1016180.md)
 
