--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-5 [开罗谈判持续，但加沙停火希望似更为渺茫](/articles/voa/1015878.md)
+
 5-5 [乌克兰在战争中度过第三个复活节，泽连斯基称上帝肩批乌克兰国旗](/articles/voa/1015879.md)
 
 5-5 [“流亡也不安全” 洛杉矶举行《异见者》观影及示威活动，揭示并抗议中共跨国镇压](/articles/voa/1015880.md)
@@ -598,6 +600,4 @@
 4-23 [布林肯访华前夕 美众议员呼吁向北京施压人权议题](/articles/voa/1016176.md)
 
 4-23 [欧盟投票通过立法 禁止中国强迫劳动产品进入欧盟迈出关键一步](/articles/voa/1016177.md)
-
-4-23 [美军印太司令阿奎利诺：中国在“经济衰退”期仍扩充军备令人担忧](/articles/voa/1016178.md)
 
