--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-6 [习近平抵达巴黎展开欧洲之行，但中欧贸易争端阴霾如影随形](/articles/voa/1015877.md)
+
 5-5 [开罗谈判持续，但加沙停火希望似更为渺茫](/articles/voa/1015878.md)
 
 5-5 [乌克兰在战争中度过第三个复活节，泽连斯基称上帝肩批乌克兰国旗](/articles/voa/1015879.md)
@@ -598,6 +600,4 @@
 4-24 [深圳发布暴雨红色预警，全市进入紧急防御状态](/articles/voa/1016175.md)
 
 4-23 [布林肯访华前夕 美众议员呼吁向北京施压人权议题](/articles/voa/1016176.md)
-
-4-23 [欧盟投票通过立法 禁止中国强迫劳动产品进入欧盟迈出关键一步](/articles/voa/1016177.md)
 
