--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-6 [成千上万民众在匈牙利政府大本营抗议欧尔班总理](/articles/voa/1015875.md)
+
 5-6 [以色列警察搜查半岛电视台在东耶路撒冷的办公室，没收设备](/articles/voa/1015876.md)
 
 5-6 [习近平抵达巴黎展开欧洲之行，但中欧贸易争端阴霾如影随形](/articles/voa/1015877.md)
@@ -598,6 +600,4 @@
 4-24 [英国宣布6亿2千万美元对乌克兰新军援，计划增加自身国防预算](/articles/voa/1016173.md)
 
 4-24 [台湾当选总统赖清德会晤美国议员，称赞美国军援法案“吓阻威权势力扩张”](/articles/voa/1016174.md)
-
-4-24 [深圳发布暴雨红色预警，全市进入紧急防御状态](/articles/voa/1016175.md)
 
