--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-6 [冷杉RECORD｜隐痛66岁：当一位农村女性遭受三次性侵](/articles/cdt/341001.md)
+
+5-6 [二湘的十一维空间｜梅龙高速下跪的他，莫大的勇气和瞬间的生死](/articles/cdt/341003.md)
+
+5-6 [维舟｜通胀要来了吗？](/articles/cdt/341005.md)
+
 5-5 [每日一语 2024.5.4](/articles/cdt/341021.md)
 
 5-5 [【404文库】侠骨柔情的铁哥｜千年大计之空城计——雄安设立7年后的现况](/articles/cdt/341030.md)
@@ -594,10 +600,4 @@
 4-2 [新周刊｜从114m²到73m²，这届中产开始反向换房](/articles/cdt/342150.md)
 
 4-2 [天涯行路｜带米粉进学校被记过停课，同学自发的“悼念”是种无声抗议](/articles/cdt/342152.md)
-
-4-1 [每日一语 2024.4.1](/articles/cdt/342156.md)
-
-4-1 [亮见｜他们瞎胡搞时，总是振振有词](/articles/cdt/342159.md)
-
-4-1 [知灼｜该怎么医治这个“生病”的社会](/articles/cdt/342161.md)
 
