--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-6 [欧盟负责人在同习近平的会谈中将敦促中国“公平”竞争](/articles/voa/1015873.md)
+
 5-6 [拜登向南希·佩洛西、美德加·艾维斯和杨紫琼等人颁发自由勋章](/articles/voa/1015874.md)
 
 5-6 [成千上万民众在匈牙利政府大本营抗议欧尔班总理](/articles/voa/1015875.md)
@@ -598,6 +600,4 @@
 4-24 [TikTok大玩美国政治牌，恐仍难免在美国被剥离或是被禁用的命运](/articles/voa/1016171.md)
 
 4-24 [抗议风潮不断，哥伦比亚大学取消课堂教学，校园气氛紧张](/articles/voa/1016172.md)
-
-4-24 [英国宣布6亿2千万美元对乌克兰新军援，计划增加自身国防预算](/articles/voa/1016173.md)
 
