--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-6 [【404帖子】李戊晨_｜这次事故我永远失去了老婆、妈妈、岳母](/articles/cdt/340997.md)
+
 5-6 [每日一语 2024.5.5](/articles/cdt/340999.md)
 
 5-6 [冷杉RECORD｜隐痛66岁：当一位农村女性遭受三次性侵](/articles/cdt/341001.md)
@@ -598,6 +600,4 @@
 4-2 [视障者｜不能免费乘坐地铁，其实和有没有残疾证没多大关系](/articles/cdt/342144.md)
 
 4-2 [南方周末｜化解千亿地方债，湘潭的“自救”与“他救”](/articles/cdt/342148.md)
-
-4-2 [新周刊｜从114m²到73m²，这届中产开始反向换房](/articles/cdt/342150.md)
 
