--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-6 [習近平對歐「分而治之」 首站先會法歐領袖](/articles/dw/1025666.md)
+
+5-6 [以色列关闭境内半岛电视台分部 突袭办公室](/articles/dw/1025667.md)
+
 5-5 [长平观察：为什么违背民意废除死刑？](/articles/dw/1025668.md)
 
 5-5 [人工智能在德企还需迎头赶上](/articles/dw/1025669.md)
@@ -596,8 +600,4 @@
 4-9 [德国先遣部队赴立陶宛 二战后德军首次常驻海外](/articles/dw/1025964.md)
 
 4-9 [俄外长到访北京 “习普会“即将登场](/articles/dw/1025965.md)
-
-4-9 [德军将派军舰军机赴印太参加多场军演](/articles/dw/1025966.md)
-
-4-9 [欧洲人权法院裁决：气候保护是一项人权](/articles/dw/1025967.md)
 
