--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-6 [盖洛普全球领导力调查：美国和中国，究竟谁更深得人心？](/articles/voa/1015870.md)
+
 5-6 [内塔尼亚胡：如果以色列被迫孤立无援将独立应对](/articles/voa/1015871.md)
 
 5-6 [巴拿马选出新总统 新政府将面临诸多艰巨任务](/articles/voa/1015872.md)
@@ -598,6 +600,4 @@
 4-24 [欧盟突击搜查一家中国安全设备公司，涉海外补贴问题](/articles/voa/1016168.md)
 
 4-24 [美参院两党以压倒多数为最后通过援助乌克兰以色列和台湾的法案扫清障碍](/articles/voa/1016169.md)
-
-4-24 [TikTok大玩美国政治牌，恐仍难免在美国被剥离或是被禁用的命运](/articles/voa/1016170.md)
 
