--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-6 [尽管存在安全疑虑 德国政治人物仍争相使用TikTok](/articles/voa/1015866.md)
+
+5-6 [习近平本周访欧侧重匈牙利和塞尔维亚 寻求巩固在欧洲的立足之地](/articles/voa/1015867.md)
+
 5-6 [避免南中国海紧张局势 菲律宾表示不会使用高压水炮反击中国](/articles/voa/1015868.md)
 
 5-6 [睽违四年半的三方峰会有望月底登场 日韩称与中国进行最终协调](/articles/voa/1015869.md)
@@ -596,8 +600,4 @@
 4-24 [往终点迈进！美参院推进对外援助法案，包括可能封禁TikTok议案](/articles/voa/1016164.md)
 
 4-24 [中国称外国间谍“无孔不入”，美商会：中国对国安的“极度”重视拖累商业](/articles/voa/1016165.md)
-
-4-24 [布林肯二度访华前 中国党媒放话要他“放低姿态”](/articles/voa/1016166.md)
-
-4-24 [美国反兴奋剂机构呼吁整改世界反兴奋剂机构，独立调查中国游泳运动员药检问题](/articles/voa/1016167.md)
 
