--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-6 [打破纪录！法国面包师夺回最长法棍面包荣誉](/articles/dw/1025658.md)
+
 5-6 [不敌竞争 欧洲汽车零部件供应商面临穷途末路](/articles/dw/1025659.md)
 
 5-6 [俄罗斯宣布即将举行战术核演习 回应英法“挑衅性言论”](/articles/dw/1025660.md)
@@ -598,6 +600,4 @@
 4-10 [调研：中国政府大力补贴绿色能源](/articles/dw/1025956.md)
 
 4-10 [美国亚利桑那州将执行19世纪堕胎禁令](/articles/dw/1025957.md)
-
-4-10 [爱尔兰、澳大利亚考虑正式承认巴勒斯坦国](/articles/dw/1025958.md)
 
