--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-6 [北青深一度｜成为“理财师”的农村老人失去了毕生积蓄](/articles/cdt/340976.md)
+
+5-6 [亮见｜一部名为“胖猫”的连续剧](/articles/cdt/340978.md)
+
+5-6 [马与人说｜谁来祭奠梅大高速的遇难者？](/articles/cdt/340980.md)
+
 5-6 [衣者褚｜惨烈的事故与催人泪下的故事](/articles/cdt/340983.md)
 
 5-6 [亮见｜在每一个替代品背后，都藏着一头人人避而不谈的大象](/articles/cdt/340986.md)
@@ -594,10 +600,4 @@
 4-3 [深耕纪｜医学生的规培制度是怎样扭曲的？](/articles/cdt/342121.md)
 
 4-3 [工事有料｜怀孕女工的困境：不只是怀胎之苦，而是整个生育条件的恶劣](/articles/cdt/342123.md)
-
-4-3 [每日一语 2024.4.2](/articles/cdt/342125.md)
-
-4-2 [【404文库】古老板的老巢｜站出来，阻击网络文革！](/articles/cdt/342135.md)
-
-4-2 [亮见｜谁还记得谭秦东？](/articles/cdt/342137.md)
 
