--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-6 [每日一语 2024.5.6](/articles/cdt/340968.md)
+
+5-6 [二湘的十一维空间｜二湘：梅龙高速下跪的他，莫大的勇气和瞬间的生死](/articles/cdt/340971.md)
+
+5-6 [七叔东山再起｜爱国饭，是真的好吃](/articles/cdt/340974.md)
+
 5-6 [北青深一度｜成为“理财师”的农村老人失去了毕生积蓄](/articles/cdt/340976.md)
 
 5-6 [亮见｜一部名为“胖猫”的连续剧](/articles/cdt/340978.md)
@@ -594,10 +600,4 @@
 4-3 [南方周末｜“我有病，我有抑郁症”：三岁小儿被母亲扔下高楼坠亡](/articles/cdt/342112.md)
 
 4-3 [南风窗｜快递能上门了，但快递小哥要被罚垮了](/articles/cdt/342117.md)
-
-4-3 [林中的维吉尔｜甭管这话是不是雷军说的，它都很二百五](/articles/cdt/342119.md)
-
-4-3 [深耕纪｜医学生的规培制度是怎样扭曲的？](/articles/cdt/342121.md)
-
-4-3 [工事有料｜怀孕女工的困境：不只是怀胎之苦，而是整个生育条件的恶劣](/articles/cdt/342123.md)
 
