--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-7 [解放军战机在国际水域向澳军用直升机危险发射照明弹，澳大利亚表达关切和抗议](/articles/voa/1015855.md)
+
+5-7 [应对台海紧急状态，台湾正打造本土“星链”通讯网络](/articles/voa/1015856.md)
+
 5-6 [法欧中巴黎峰会 分析:欧洲一致，北京难分化](/articles/voa/1015857.md)
 
 5-6 [台湾副总统当选人：台湾必须投资建立自己的“实力”](/articles/voa/1015858.md)
@@ -596,8 +600,4 @@
 4-24 [特朗普在纽约会见日本前首相麻生太郎](/articles/voa/1016153.md)
 
 4-24 [所罗门群岛选后谁将组建政府仍是未知数 现任总理：会负责安全工作](/articles/voa/1016154.md)
-
-4-24 [美国会通过援外法案 拜登将签署、中国反对美国援台](/articles/voa/1016155.md)
-
-4-24 [中共监视系统的利器：从“维稳信息员”到“社区工作者”](/articles/voa/1016156.md)
 
