--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-7 [哈马斯称接受停火提议，但以色列尚未发表评论](/articles/voa/1015853.md)
+
 5-7 [联合国儿童基金会：拉法60万儿童“无安全处所可去”](/articles/voa/1015854.md)
 
 5-7 [解放军战机在国际水域向澳军用直升机危险发射照明弹，澳大利亚表达关切和抗议](/articles/voa/1015855.md)
@@ -598,6 +600,4 @@
 4-24 [布林肯抵达上海 展开三天访华行程](/articles/voa/1016151.md)
 
 4-24 [荷兰芯片巨商ASML新CEO上任 首要关注中国业务](/articles/voa/1016152.md)
-
-4-24 [特朗普在纽约会见日本前首相麻生太郎](/articles/voa/1016153.md)
 
