--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-7 [在由男性统治的中国，“过一种女性主义的生活”](/articles/nyt/1042801.md)
+
 5-7 [中国电动汽车推陈出新，欧美老牌车企面临挑战](/articles/nyt/1042802.md)
 
 5-6 [“我爱妈祖，妈祖爱我”：台湾年轻人拥抱古老神灵](/articles/nyt/1042803.md)
@@ -598,6 +600,4 @@
 1-24 [中国疑叫停网游消费管控计划，腾讯网易股价攀升](/articles/nyt/1043099.md)
 
 1-23 [中国旅游经济缓慢恢复，现状如何？](/articles/nyt/1043100.md)
-
-1-23 [朝鲜导弹出现在乌克兰战场，引发美国担忧](/articles/nyt/1043101.md)
 
