--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-7 [2024世界新闻摄影奖：痛苦、哀伤与感人的瞬间](/articles/dw/1025654.md)
+
+5-7 [蕭美琴強調台灣韌性 中批美官員「打台灣牌」](/articles/dw/1025655.md)
+
 5-6 [停止乌战、公平贸易：马克龙、冯德莱恩向习近平施压](/articles/dw/1025656.md)
 
 5-6 [澳防长：中国战机危险动作不可接受](/articles/dw/1025657.md)
@@ -596,8 +600,4 @@
 4-11 [分析：「習馬二會」釋信號？能否奏效？](/articles/dw/1025952.md)
 
 4-10 [出口民调：韩国在野党在国会选举中大幅领先](/articles/dw/1025953.md)
-
-4-10 [“马习二会”习近平对马英九说:“你都没变”](/articles/dw/1025954.md)
-
-4-10 [“习马二会”登场 双方互称“先生”](/articles/dw/1025955.md)
 
