--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-7 [决定暂不对法国白兰地酒征收关税 习近平继续欧洲行寻求打破欧盟对华贸易立场](/articles/voa/1015837.md)
+
+5-7 [澳大利亚总理称中国军事干预澳军机在黄海国际水域行为 “不可接受”](/articles/voa/1015838.md)
+
 5-7 [中国气候特使访美 美中将召开气候行动双边会议](/articles/voa/1015839.md)
 
 5-7 [马斯克爽约莫迪后，特斯拉是否放弃了印度？](/articles/voa/1015840.md)
@@ -596,8 +600,4 @@
 4-25 [美商务部致函美议员：正在审议中国使用RISC-V芯片的国安影响](/articles/voa/1016135.md)
 
 4-25 [以色列向加沙地带部署预备役旅](/articles/voa/1016136.md)
-
-4-25 [推特上的中国：布林肯抵达中国，网友关注中国没为他铺设红毯](/articles/voa/1016137.md)
-
-4-25 [美国证实之前已向乌克兰提供ATACMS远程战术导弹](/articles/voa/1016138.md)
 
