--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-7 [声道｜百度副总裁的狼性表演，翻车了](/articles/cdt/340946.md)
+
+5-7 [极昼工作室｜五位催收员的讲述：负债者越来越多，钱却越来越难催](/articles/cdt/340952.md)
+
+5-7 [剑客写字的地方｜报团参观海参崴大阅兵，支持要肢解我们的俄国学者，究竟谁是“奸”？](/articles/cdt/340957.md)
+
 5-7 [【CDT网语】云浩止耕、梅大高速塌陷、哥大学生抗议运动（2024年第4期）](/articles/cdt/340962.md)
 
 5-6 [每日一语 2024.5.6](/articles/cdt/340968.md)
@@ -594,10 +600,4 @@
 4-4 [【CDT网语】一言难尽的春天：孩子在杀人，成年人在攻击矿泉水（2024年3月）](/articles/cdt/342093.md)
 
 4-5 [【CDTV】“我长大要当中国农业发展银行行长，继承家产”](/articles/cdt/342094.md)
-
-4-3 [工事有料｜怀孕女工的困境：不只是怀胎之苦，而是整个生育条件的恶劣](/articles/cdt/342103.md)
-
-4-3 [竹不倒｜小小年纪，就知道“银行是他要继承的家产”了？](/articles/cdt/342107.md)
-
-4-3 [知乎问答｜为什么总感觉北京不像是一个东亚城市？](/articles/cdt/342108.md)
 
