--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-7 [比利牛斯山一对一交谈，马克龙寻求促使习近平在贸易上让步](/articles/voa/1015832.md)
+
+5-7 [德国总理朔尔茨呼吁中国加大努力，减少贫穷国家债务](/articles/voa/1015833.md)
+
 5-7 [乌克兰和平峰会6月登场，中国外交官称应包括俄罗斯和中国](/articles/voa/1015834.md)
 
 5-7 [因应中国威胁升高 德陆军拟明年赴日本进行首次联合演训](/articles/voa/1015835.md)
@@ -596,8 +600,4 @@
 4-25 [从俄罗斯到中东到台湾到TikTok，布林肯访华议题众多，但两国分歧也明显](/articles/voa/1016130.md)
 
 4-25 [执政八年卸任倒计时，台湾人民如何评价蔡英文总统施政表现？](/articles/voa/1016131.md)
-
-4-25 [2024选举议题：拜登和特朗普都对大麻问题小心谨慎，立场模糊](/articles/voa/1016132.md)
-
-4-25 [波士顿中国留学生因骚扰民主活动人士而被判九个月监禁](/articles/voa/1016133.md)
 
