--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-7 [中国云南发生恶性持刀行凶事件，两死二十多伤](/articles/voa/1015831.md)
+
 5-7 [比利牛斯山一对一交谈，马克龙寻求促使习近平在贸易上让步](/articles/voa/1015832.md)
 
 5-7 [德国总理朔尔茨呼吁中国加大努力，减少贫穷国家债务](/articles/voa/1015833.md)
@@ -598,6 +600,4 @@
 4-25 [拜登签署新的援助法案后,美国对以色列的军事援助将面临审视](/articles/voa/1016129.md)
 
 4-25 [从俄罗斯到中东到台湾到TikTok，布林肯访华议题众多，但两国分歧也明显](/articles/voa/1016130.md)
-
-4-25 [执政八年卸任倒计时，台湾人民如何评价蔡英文总统施政表现？](/articles/voa/1016131.md)
 
