--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-8 [世界媒体看中国 - 习近平访欧，乌克兰议题见本色](/articles/voa/1015826.md)
+
+5-8 [因火箭阀门问题，波音首次载人飞船发射被取消](/articles/voa/1015827.md)
+
 5-8 [德军数十年中最大军事行动：海军舰只驶往印太，陆军计划明年与日军联合军演](/articles/voa/1015828.md)
 
 5-8 [英军方薪资档案疑遭中国黑客入侵，苏纳克称是“恶意行为者”所为](/articles/voa/1015829.md)
@@ -596,8 +600,4 @@
 4-25 [拜登政府与美光就在美国境内生产尖端存储芯片达成协议](/articles/voa/1016124.md)
 
 4-25 [欧洲城市出台新措施 应对“过度旅游”](/articles/voa/1016125.md)
-
-4-25 [俄罗斯否决联合国通过防止外空核军备竞赛决议案](/articles/voa/1016126.md)
-
-4-25 [布林肯会见上海市委书记 吁美中负责任地管理两国关系](/articles/voa/1016127.md)
 
