--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-8 [【网络民议】“香飘飘不是爱国，是爱钱”](/articles/cdt/340933.md)
+
 5-7 [每日一语 2024.5.7](/articles/cdt/340935.md)
 
 5-7 [旧闻评论｜人们怎样议论梅大高速惨剧？](/articles/cdt/340938.md)
@@ -598,6 +600,4 @@
 4-4 [亮见｜堂堂国有银行，咋就成了你家的家产？](/articles/cdt/342078.md)
 
 4-4 [城市的地得｜想当行长的小孩说出了残酷真相](/articles/cdt/342080.md)
-
-4-4 [每日一语 2024.4.3](/articles/cdt/342082.md)
 
