--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-8 [美国务院官员：中国信息操控对全球南方产生巨大影响](/articles/voa/1015820.md)
+
+5-8 [美国与盟国联手制裁一名俄罗斯黑客首领](/articles/voa/1015821.md)
+
 5-8 [以色列占领拉法过境点加沙一侧，美国希望在停火谈判中取得进展](/articles/voa/1015822.md)
 
 5-8 [过境口岸关闭，加沙援助被切断](/articles/voa/1015823.md)
@@ -596,8 +600,4 @@
 4-25 [布林肯敦促北京为美国在华企业提供一个公平竞争环境](/articles/voa/1016118.md)
 
 4-25 [调查：港人热心英国大选 关注对中政策](/articles/voa/1016119.md)
-
-4-25 [国际特赦组织人权报告 关注中国“极权扩张”](/articles/voa/1016120.md)
-
-4-25 [随着疫情后边境重新开放 更多朝鲜人被从中国遣返回国](/articles/voa/1016121.md)
 
