--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-8 [美军完成加沙援助码头建设](/articles/voa/1015818.md)
+
+5-8 [习近平访法结束,在贸易和支持俄罗斯方面几乎没有让步](/articles/voa/1015819.md)
+
 5-8 [美国务院官员：中国信息操控对全球南方产生巨大影响](/articles/voa/1015820.md)
 
 5-8 [美国与盟国联手制裁一名俄罗斯黑客首领](/articles/voa/1015821.md)
@@ -596,8 +600,4 @@
 4-25 [中国海军高级官员本周分别会晤美俄海军官员](/articles/voa/1016116.md)
 
 4-25 [运载朝鲜武器的俄罗斯货轮遭美制裁，中国却为其提供“避风港”](/articles/voa/1016117.md)
-
-4-25 [布林肯敦促北京为美国在华企业提供一个公平竞争环境](/articles/voa/1016118.md)
-
-4-25 [调查：港人热心英国大选 关注对中政策](/articles/voa/1016119.md)
 
