--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+5-8 [拜登抨击反犹太主义“迅猛激增”](/articles/voa/1015814.md)
+
+5-8 [美中新气候特使将在华盛顿举行首次面对面会谈](/articles/voa/1015815.md)
+
+5-8 [布林肯前往危地马拉出席地区移民会议](/articles/voa/1015816.md)
+
+5-8 [巴基斯坦：位于阿富汗境内的恐怖分子策划了针对中国工程师的自杀式袭击](/articles/voa/1015817.md)
+
 5-8 [美军完成加沙援助码头建设](/articles/voa/1015818.md)
 
 5-8 [习近平访法结束,在贸易和支持俄罗斯方面几乎没有让步](/articles/voa/1015819.md)
@@ -592,12 +600,4 @@
 4-26 [中国军机五分钟飞临台总统府上空？台防长：国军会监控防范](/articles/voa/1016112.md)
 
 4-26 [美提议用俄资产利息援乌广受关注，莫斯科威胁降级俄美关系](/articles/voa/1016113.md)
-
-4-26 [北京就德国接连逮捕中国间谍召见德驻华大使，大使称“耐人寻味”](/articles/voa/1016114.md)
-
-4-25 [赖清德公布新国安团队 吁中国“有自信”面对台湾合法政府](/articles/voa/1016115.md)
-
-4-25 [中国海军高级官员本周分别会晤美俄海军官员](/articles/voa/1016116.md)
-
-4-25 [运载朝鲜武器的俄罗斯货轮遭美制裁，中国却为其提供“避风港”](/articles/voa/1016117.md)
 
