--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-8 [英国27万军人信息疑遭中国网络攻击泄露，第三方承包商安全隐患引关注](/articles/voa/1015813.md)
+
 5-8 [拜登抨击反犹太主义“迅猛激增”](/articles/voa/1015814.md)
 
 5-8 [美中新气候特使将在华盛顿举行首次面对面会谈](/articles/voa/1015815.md)
@@ -598,6 +600,4 @@
 4-26 [拜登和其他17国领导人发表联合声明，要求哈马斯释放人质](/articles/voa/1016111.md)
 
 4-26 [中国军机五分钟飞临台总统府上空？台防长：国军会监控防范](/articles/voa/1016112.md)
-
-4-26 [美提议用俄资产利息援乌广受关注，莫斯科威胁降级俄美关系](/articles/voa/1016113.md)
 
