--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+5-8 [吃火腿、送球衣：马克龙的魅力攻势能打动习近平吗](/articles/nyt/1042794.md)
+
+5-8 [TikTok起诉美国政府，要求推翻强制出售法案](/articles/nyt/1042795.md)
+
 5-8 [在愈发对中国不满的东欧，习近平将访问两个友好国家](/articles/nyt/1042796.md)
 
 5-7 [云南一家医院发生持刀袭击事件，致至少两死21伤](/articles/nyt/1042797.md)
@@ -596,8 +600,4 @@
 1-25 [为何好莱坞大片在中国不再吃香](/articles/nyt/1043092.md)
 
 1-25 [台湾新总统赖清德：草根出身，面临两岸关系考验](/articles/nyt/1043093.md)
-
-1-25 [江西新余火灾致39人遇难](/articles/nyt/1043094.md)
-
-1-24 [特朗普赢得新罕布什尔州初选，距总统提名更近一步](/articles/nyt/1043095.md)
 
