--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-8 [美國禁令無效？研究指大型零售商品含新疆棉](/articles/dw/1025641.md)
+
 5-7 [英国称国防部薪资系统遭遇网络攻击](/articles/dw/1025642.md)
 
 5-7 [盛大仪式下 普京开始第五任期](/articles/dw/1025643.md)
@@ -598,6 +600,4 @@
 4-11 [泽连斯基五年任期将满，战时乌克兰是否大选？](/articles/dw/1025939.md)
 
 4-11 [为什么日本首相寻求与金正恩举行峰会？](/articles/dw/1025940.md)
-
-4-11 [香港：无国界记者被逐出境 葡籍国安犯判囚5年](/articles/dw/1025941.md)
 
