--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-8 [特朗普性丑闻、拜登的严肃演讲和一场前所未有的大选](/articles/nyt/1042792.md)
+
 5-8 [美国大学校园抗议成为中俄等国的宣传“武器”](/articles/nyt/1042793.md)
 
 5-8 [吃火腿、送球衣：马克龙的魅力攻势能打动习近平吗](/articles/nyt/1042794.md)
@@ -598,6 +600,4 @@
 1-25 [台积电，世界上最重要的公司](/articles/nyt/1043090.md)
 
 1-25 [特朗普势头大好？不，两场初选暴露了他的弱点](/articles/nyt/1043091.md)
-
-1-25 [为何好莱坞大片在中国不再吃香](/articles/nyt/1043092.md)
 
