--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-8 [台湾总统就职典礼在即 军方称准备好应对中国的任何行动](/articles/voa/1015810.md)
+
 5-8 [北约与俄罗斯日益紧张之际 习近平抵访塞尔维亚](/articles/voa/1015811.md)
 
 5-8 [担心以色列对拉法发动大规模攻击 美国阻止了一批弹药运往以色列](/articles/voa/1015812.md)
@@ -598,6 +600,4 @@
 4-26 [美跨党派议员提案 要将香港经贸办地址更名为“黎智英路1号”](/articles/voa/1016108.md)
 
 4-26 [中国军事外交的价值有多大？](/articles/voa/1016109.md)
-
-4-26 [世界反兴奋剂机构任命瑞士检察官审查其对中国游泳运动员药检案的处理](/articles/voa/1016110.md)
 
