--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-8 [史上最热的4月加剧全球暖化担忧](/articles/voa/1015809.md)
+
 5-8 [台湾总统就职典礼在即 军方称准备好应对中国的任何行动](/articles/voa/1015810.md)
 
 5-8 [北约与俄罗斯日益紧张之际 习近平抵访塞尔维亚](/articles/voa/1015811.md)
@@ -598,6 +600,4 @@
 4-26 [美国新援助下，乌克兰寻求稳定前线，抢占主动](/articles/voa/1016107.md)
 
 4-26 [美跨党派议员提案 要将香港经贸办地址更名为“黎智英路1号”](/articles/voa/1016108.md)
-
-4-26 [中国军事外交的价值有多大？](/articles/voa/1016109.md)
 
