--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-8 [每日人物｜香飘飘，搬起流量砸自己的脚](/articles/cdt/340921.md)
+
+5-8 [三联生活周刊｜存续14天的哥大“加沙团结营地”：美国高校学生在反对什么？](/articles/cdt/340923.md)
+
 5-8 [【404文库】常识流通处｜强制购买公墓，湖北随州太随意](/articles/cdt/340926.md)
 
 5-8 [BJ大土豆｜通杀](/articles/cdt/340929.md)
@@ -596,8 +600,4 @@
 4-4 [人我场｜采耳店获利500被罚22万：四川宜宾为何如此热衷“天价处罚”老百姓？](/articles/cdt/342065.md)
 
 4-4 [经济观察报｜为了卖掉房子，她做了半年中介](/articles/cdt/342067.md)
-
-4-4 [那些原本是废话的常识｜平时见到墓地就嫌晦气绕路走的人，真的会敬重祖先吗](/articles/cdt/342072.md)
-
-4-4 [麦杰逊｜确认了！这确实是某银行行长的公子](/articles/cdt/342074.md)
 
