--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-8 [港法院頒令禁制傳播《願榮光歸香港》](/articles/dw/1025637.md)
+
 5-8 [技术战升级 美政府撤销华为供货许可](/articles/dw/1025638.md)
 
 5-8 [德国接连发生政治人物遭袭案件 柏林前市长受伤](/articles/dw/1025639.md)
@@ -598,6 +600,4 @@
 4-12 [两岸民众怎么看“马习二会”?](/articles/dw/1025935.md)
 
 4-12 [美日菲對華釋訊號 深化經濟安全關係抗衡北京](/articles/dw/1025936.md)
-
-4-12 [肖爾茨將率德企訪華 專家：掩蓋不了分歧](/articles/dw/1025937.md)
 
