--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-8 [欧洲之行最后一站：习近平周三到访匈牙利](/articles/dw/1025635.md)
+
+5-8 [客座评论：“劳动节”与“劳工节“之辩](/articles/dw/1025636.md)
+
 5-8 [港法院頒令禁制傳播《願榮光歸香港》](/articles/dw/1025637.md)
 
 5-8 [技术战升级 美政府撤销华为供货许可](/articles/dw/1025638.md)
@@ -596,8 +600,4 @@
 4-12 [专访：应同中国谈我们的利益所在](/articles/dw/1025933.md)
 
 4-12 [德国总理访中：俄乌战争下的外交挑战](/articles/dw/1025934.md)
-
-4-12 [两岸民众怎么看“马习二会”?](/articles/dw/1025935.md)
-
-4-12 [美日菲對華釋訊號 深化經濟安全關係抗衡北京](/articles/dw/1025936.md)
 
