--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-8 [中国两战舰在柬埔寨云朗基地停泊超五个月，被质疑永久部署](/articles/voa/1015807.md)
+
 5-8 [冯德莱恩再发警告：必须阻止中国电动车充斥欧盟市场](/articles/voa/1015808.md)
 
 5-8 [史上最热的4月加剧全球暖化担忧](/articles/voa/1015809.md)
@@ -598,6 +600,4 @@
 4-26 [耶伦：在应对中国的产能过剩问题上，美不排除任何选项](/articles/voa/1016105.md)
 
 4-26 [欧洲议会通过新法律打击强迫劳动，禁止相关商品进入市场](/articles/voa/1016106.md)
-
-4-26 [美国新援助下，乌克兰寻求稳定前线，抢占主动](/articles/voa/1016107.md)
 
