--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+5-8 [塞尔维亚与中国签署历史性协议 构建“共同命运体”](/articles/dw/1025630.md)
+
+5-8 [专访：习近平访欧以打破欧美阵线](/articles/dw/1025631.md)
+
+5-8 [美国正权衡是否认定越南为市场经济国家](/articles/dw/1025632.md)
+
 5-8 [阿斯利康在全球下架Vaxzevria新冠疫苗](/articles/dw/1025633.md)
 
 5-8 [习近平开始访问欧洲 首站巴黎](/articles/dw/1025634.md)
@@ -594,10 +600,4 @@
 4-12 [性别自决法：德国联邦议院今日表决通过](/articles/dw/1025928.md)
 
 4-12 [中国敦促美国在解决中东问题上“发挥建设性作用”](/articles/dw/1025929.md)
-
-4-12 [美日菲對華釋訊號 北京召见日菲外交官](/articles/dw/1025930.md)
-
-4-12 [调查：德国企业对华“去风险”成效可圈可点](/articles/dw/1025931.md)
-
-4-12 [台湾希望肖尔茨访华直言不讳](/articles/dw/1025932.md)
 
