--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-8 [国际货币基金组织：贸易碎片化严重威胁全球贸易体系](/articles/voa/1015805.md)
+
+5-8 [传媒大亨黎智英国安审讯远超原定审期](/articles/voa/1015806.md)
+
 5-8 [中国两战舰在柬埔寨云朗基地停泊超五个月，被质疑永久部署](/articles/voa/1015807.md)
 
 5-8 [冯德莱恩再发警告：必须阻止中国电动车充斥欧盟市场](/articles/voa/1015808.md)
@@ -596,8 +600,4 @@
 4-26 [拜登访问纽约州雪城，彰显向美光提供联邦资金建立本土芯片厂计划](/articles/voa/1016103.md)
 
 4-26 [美国2024年第一季度经济增速大幅放缓至1.6%](/articles/voa/1016104.md)
-
-4-26 [耶伦：在应对中国的产能过剩问题上，美不排除任何选项](/articles/voa/1016105.md)
-
-4-26 [欧洲议会通过新法律打击强迫劳动，禁止相关商品进入市场](/articles/voa/1016106.md)
 
