--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-9 [人权机构在世界知名大学举办巡回演讲，纪念六四35周年](/articles/voa/1015803.md)
+
 5-8 [香港上诉庭推翻原审法院裁决，将抗议歌曲《愿荣光归香港》列为禁歌](/articles/voa/1015804.md)
 
 5-8 [国际货币基金组织：贸易碎片化严重威胁全球贸易体系](/articles/voa/1015805.md)
@@ -598,6 +600,4 @@
 4-26 [无视地缘政治因素启用全新研发中心,台湾成为谷歌在美以外最大硬件研发基地](/articles/voa/1016101.md)
 
 4-26 [美疾控中心：美国生育率在后疫情时代小幅反弹后下降](/articles/voa/1016102.md)
-
-4-26 [拜登访问纽约州雪城，彰显向美光提供联邦资金建立本土芯片厂计划](/articles/voa/1016103.md)
 
