--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-9 [欧洲议会议员：习近平欧洲之行分化美欧同盟的可能性为零](/articles/voa/1015800.md)
+
 5-9 [澳大利亚加大对图瓦卢的财政支持，外长和参议员联袂访图](/articles/voa/1015801.md)
 
 5-9 [美菲“肩并肩”大规模军演，在有争议南中国海击沉假想敌船](/articles/voa/1015802.md)
@@ -598,6 +600,4 @@
 4-26 [王毅称美国正在打压中国的发展 布林肯：尽可能了解两国分歧避免误判](/articles/voa/1016098.md)
 
 4-26 [北约秘书长：若中国寻求与西方保持良好关系就必须停止援助俄罗斯](/articles/voa/1016099.md)
-
-4-26 [美国呼吁中国帮助监督对朝鲜的制裁](/articles/voa/1016100.md)
 
