--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-9 [美国撤销某些对华为的出口许可证，北京表示“坚决反对”](/articles/voa/1015798.md)
+
+5-9 [国安新规7月实施 入境中国可随时被查验手机电脑](/articles/voa/1015799.md)
+
 5-9 [欧洲议会议员：习近平欧洲之行分化美欧同盟的可能性为零](/articles/voa/1015800.md)
 
 5-9 [澳大利亚加大对图瓦卢的财政支持，外长和参议员联袂访图](/articles/voa/1015801.md)
@@ -596,8 +600,4 @@
 4-26 [中国个人债务暴增 政府难辞其咎](/articles/voa/1016096.md)
 
 4-26 [TikTok面临下架危机 中国母公司字节跳动：没有出售打算](/articles/voa/1016097.md)
-
-4-26 [王毅称美国正在打压中国的发展 布林肯：尽可能了解两国分歧避免误判](/articles/voa/1016098.md)
-
-4-26 [北约秘书长：若中国寻求与西方保持良好关系就必须停止援助俄罗斯](/articles/voa/1016099.md)
 
