--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-9 [欧盟成员国达成临时协议，将使用被冻结俄罗斯资产的利润向乌克兰提供军援](/articles/voa/1015797.md)
+
 5-9 [美国撤销某些对华为的出口许可证，北京表示“坚决反对”](/articles/voa/1015798.md)
 
 5-9 [国安新规7月实施 入境中国可随时被查验手机电脑](/articles/voa/1015799.md)
@@ -598,6 +600,4 @@
 4-26 [中国控制言论要求苹果下架APP，评论:挡不住群众的智慧](/articles/voa/1016095.md)
 
 4-26 [中国个人债务暴增 政府难辞其咎](/articles/voa/1016096.md)
-
-4-26 [TikTok面临下架危机 中国母公司字节跳动：没有出售打算](/articles/voa/1016097.md)
 
