--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-9 [这不是我记忆中那个中国](/articles/nyt/1042790.md)
+
 5-9 [中美将就人工智能使用问题开启“军备控制谈判”](/articles/nyt/1042791.md)
 
 5-8 [特朗普性丑闻、拜登的严肃演讲和一场前所未有的大选](/articles/nyt/1042792.md)
@@ -598,6 +600,4 @@
 1-26 [两个美国，两个总统？特朗普与拜登的决战将意味着什么](/articles/nyt/1043088.md)
 
 1-25 [黑柳彻子：100岁的女人也能主持脱口秀](/articles/nyt/1043089.md)
-
-1-25 [台积电，世界上最重要的公司](/articles/nyt/1043090.md)
 
