--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-9 [香港法院批准禁制令，《愿荣光归香港》成禁歌](/articles/nyt/1042789.md)
+
 5-9 [这不是我记忆中那个中国](/articles/nyt/1042790.md)
 
 5-9 [中美将就人工智能使用问题开启“军备控制谈判”](/articles/nyt/1042791.md)
@@ -598,6 +600,4 @@
 1-26 [美国关注朝鲜是否会对韩国采取致命军事行动](/articles/nyt/1043087.md)
 
 1-26 [两个美国，两个总统？特朗普与拜登的决战将意味着什么](/articles/nyt/1043088.md)
-
-1-25 [黑柳彻子：100岁的女人也能主持脱口秀](/articles/nyt/1043089.md)
 
