--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-9 [澳大利亚与图瓦卢同意今年启动安全条约 担忧中国在区域势力扩张](/articles/voa/1015781.md)
+
+5-9 [习近平抵达匈牙利 示威群众抗议“独裁者”到访](/articles/voa/1015782.md)
+
 5-9 [美商务部长：专注保护“卡脖子”技术，不寻求切断对华贸易](/articles/voa/1015783.md)
 
 5-9 [在泰国被拘留十年后，维吾尔难民的命运依然未卜](/articles/voa/1015784.md)
@@ -596,8 +600,4 @@
 4-27 [美台下周将在台北举办新回合《21世纪贸易倡议》协定谈判](/articles/voa/1016079.md)
 
 4-27 [布林肯访华未能取得任何突破，美中关系从急剧下滑走向稳步恶化](/articles/voa/1016080.md)
-
-4-27 [布林肯访问中国触及台海议题，学者：或有对北京提再保证管控台海风险](/articles/voa/1016081.md)
-
-4-27 [以色列进攻拉法在即，埃及调解人试图重启以哈和平谈判](/articles/voa/1016082.md)
 
