--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-9 [风声OPINION｜网恋自杀的胖猫悲剧，是感情问题还是法律问题？](/articles/cdt/340907.md)
+
 5-9 [张3丰的世界｜在纽约遇见秦晖老师](/articles/cdt/340912.md)
 
 5-9 [城市的地得｜仍有孩子认真学新闻](/articles/cdt/340915.md)
@@ -598,6 +600,4 @@
 4-6 [【CDT报告汇】微软：中国利用虚假社媒账号制造美国国内分裂（外二篇）](/articles/cdt/342047.md)
 
 4-5 [【图说天朝】敏感的日子又多了一个：清明节](/articles/cdt/342060.md)
-
-4-4 [顶尖见闻｜现在重庆在逐步给居民门牌安装二维码了](/articles/cdt/342062.md)
 
