--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-9 [拜登公开表态： 若以色列入侵拉法，他不会提供弹药](/articles/voa/1015779.md)
+
+5-9 [台湾新总统即将就职，美国驱逐舰通过台湾海峡](/articles/voa/1015780.md)
+
 5-9 [澳大利亚与图瓦卢同意今年启动安全条约 担忧中国在区域势力扩张](/articles/voa/1015781.md)
 
 5-9 [习近平抵达匈牙利 示威群众抗议“独裁者”到访](/articles/voa/1015782.md)
@@ -596,8 +600,4 @@
 4-27 [美空军授予内华达山脉公司130亿美元新一代“末日飞机”合同](/articles/voa/1016077.md)
 
 4-27 [全美各地校园示威增多，布林肯批评抗议学生对哈马斯“保持沉默”](/articles/voa/1016078.md)
-
-4-27 [美台下周将在台北举办新回合《21世纪贸易倡议》协定谈判](/articles/voa/1016079.md)
-
-4-27 [布林肯访华未能取得任何突破，美中关系从急剧下滑走向稳步恶化](/articles/voa/1016080.md)
 
