--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-9 [尼加拉瓜收回给与中国企业的运河特许经营权](/articles/dw/1025627.md)
+
+5-9 [北京首入列全球前十富有城市 深圳富豪增140%](/articles/dw/1025628.md)
+
 5-9 [美擬禁中國聯網汽車 加碼限縮AI科技出口](/articles/dw/1025629.md)
 
 5-8 [塞尔维亚与中国签署历史性协议 构建“共同命运体”](/articles/dw/1025630.md)
@@ -596,8 +600,4 @@
 4-13 [AI: 为什么眼见不能为凭?](/articles/dw/1025925.md)
 
 4-12 [人权组织对德国向以色列出口武器提起新诉讼](/articles/dw/1025926.md)
-
-4-12 [美媒：中国监管机构要求电信运营商淘汰美国芯片](/articles/dw/1025927.md)
-
-4-12 [性别自决法：德国联邦议院今日表决通过](/articles/dw/1025928.md)
 
