--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-9 [立陶宛周日总统大选投票，俄罗斯和中国为重要议题](/articles/voa/1015777.md)
+
+5-9 [伊朗官员：国家存在若受威胁将改变核武原则](/articles/voa/1015778.md)
+
 5-9 [拜登公开表态： 若以色列入侵拉法，他不会提供弹药](/articles/voa/1015779.md)
 
 5-9 [台湾新总统即将就职，美国驱逐舰通过台湾海峡](/articles/voa/1015780.md)
@@ -596,8 +600,4 @@
 4-27 [被指控涉嫌为中国从事间谍活动的两名英国人于伦敦出庭后获保释](/articles/voa/1016075.md)
 
 4-27 [国事光析：胡赵遗产与当今思考](/articles/voa/1016076.md)
-
-4-27 [美空军授予内华达山脉公司130亿美元新一代“末日飞机”合同](/articles/voa/1016077.md)
-
-4-27 [全美各地校园示威增多，布林肯批评抗议学生对哈马斯“保持沉默”](/articles/voa/1016078.md)
 
