--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-9 [杭州全面取消住房限购 网民：还是买不起](/articles/dw/1025626.md)
+
 5-9 [尼加拉瓜收回给与中国企业的运河特许经营权](/articles/dw/1025627.md)
 
 5-9 [北京首入列全球前十富有城市 深圳富豪增140%](/articles/dw/1025628.md)
@@ -598,6 +600,4 @@
 4-13 [德国复兴信贷银行将不再为中国提供低息贷款](/articles/dw/1025924.md)
 
 4-13 [AI: 为什么眼见不能为凭?](/articles/dw/1025925.md)
-
-4-12 [人权组织对德国向以色列出口武器提起新诉讼](/articles/dw/1025926.md)
 
