--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-9 [普京在卫国战争胜利日阅兵式上致辞，指责西方甘冒全球冲突风险](/articles/voa/1015776.md)
+
 5-9 [立陶宛周日总统大选投票，俄罗斯和中国为重要议题](/articles/voa/1015777.md)
 
 5-9 [伊朗官员：国家存在若受威胁将改变核武原则](/articles/voa/1015778.md)
@@ -598,6 +600,4 @@
 4-27 [哈马斯和法塔赫在北京举行会谈](/articles/voa/1016074.md)
 
 4-27 [被指控涉嫌为中国从事间谍活动的两名英国人于伦敦出庭后获保释](/articles/voa/1016075.md)
-
-4-27 [国事光析：胡赵遗产与当今思考](/articles/voa/1016076.md)
 
