--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-9 [习近平访匈，两国领导人会谈将聚焦投资和俄乌冲突](/articles/voa/1015775.md)
+
 5-9 [普京在卫国战争胜利日阅兵式上致辞，指责西方甘冒全球冲突风险](/articles/voa/1015776.md)
 
 5-9 [立陶宛周日总统大选投票，俄罗斯和中国为重要议题](/articles/voa/1015777.md)
@@ -598,6 +600,4 @@
 4-27 [布林肯：美国的芯片技术管制不是为了遏阻中国经济和科技发展](/articles/voa/1016073.md)
 
 4-27 [哈马斯和法塔赫在北京举行会谈](/articles/voa/1016074.md)
-
-4-27 [被指控涉嫌为中国从事间谍活动的两名英国人于伦敦出庭后获保释](/articles/voa/1016075.md)
 
