--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-10 [中国主导全球清洁能源市场，这对拜登来说是一个问题](/articles/nyt/1042785.md)
+
 5-9 [“朝鲜戈培尔”去世，为金氏三代领导人打造极权宣传](/articles/nyt/1042786.md)
 
 5-9 [拜登承诺采取措施应对新一轮中国进口激增](/articles/nyt/1042787.md)
@@ -598,6 +600,4 @@
 1-29 [香港法院向恒大发出清盘令](/articles/nyt/1043083.md)
 
 1-29 [机会背后的隐忧：从“合肥模式”看中国经济现状](/articles/nyt/1043084.md)
-
-1-29 [中国承认以间谍罪名监禁一名英国商人](/articles/nyt/1043085.md)
 
