--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-10 [中美恢复非法移民遣返合作 “走线”“润美”恐遭遣返](/articles/dw/1025614.md)
+
 5-10 [停戰談判無果 以色列不顧美國反對空襲拉法](/articles/dw/1025615.md)
 
 5-10 [美中大學合作敏感科技引質疑 美國會討說法](/articles/dw/1025616.md)
@@ -598,6 +600,4 @@
 4-14 [美国将缴获的伊朗武器弹药移交乌克兰](/articles/dw/1025912.md)
 
 4-14 [伊朗对以色列发动大规模空袭](/articles/dw/1025913.md)
-
-4-14 [从稳定到负面：惠誉下调中国评级展望](/articles/dw/1025914.md)
 
