--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-10 [老丁语云｜张维为被学生提问“如何办瑞士永居”事件更多细节曝出](/articles/cdt/340892.md)
+
 5-9 [保护卫士｜李老师：全面的跨国镇压故事](/articles/cdt/340900.md)
 
 5-9 [每日一语 2024.5.8](/articles/cdt/340903.md)
@@ -598,6 +600,4 @@
 4-6 [【404文库】冰川思想库｜摔死孩子的母亲，可以同情绝不能共情](/articles/cdt/342033.md)
 
 4-5 [经济观察网｜一位地方财政局长的一季度：收入迎来开门红，支出压力仍大](/articles/cdt/342036.md)
-
-4-5 [剥洋葱people｜“王婆”的烦恼](/articles/cdt/342043.md)
 
