--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-10 [亲中疏印：马尔代夫全部印度驻军撤离](/articles/dw/1025609.md)
+
 5-10 [瑞典万人抗议以色列参加今年的欧洲歌唱大赛](/articles/dw/1025610.md)
 
 5-10 [美国超越中国成为德国最大贸易伙伴](/articles/dw/1025611.md)
@@ -598,6 +600,4 @@
 4-14 [国际社会谴责伊朗袭击 呼吁避免事态升级](/articles/dw/1025907.md)
 
 4-14 [德国向以色列大屠杀幸存者提供援助金](/articles/dw/1025908.md)
-
-4-14 [小朋友的疑惑：Siri会难过吗？](/articles/dw/1025909.md)
 
