--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-10 [美国议员推出法案 白宫政府可轻易限制AI模型出口](/articles/dw/1025607.md)
+
+5-10 [德国防长访问美国 将为乌克兰购置三套海马斯](/articles/dw/1025608.md)
+
 5-10 [亲中疏印：马尔代夫全部印度驻军撤离](/articles/dw/1025609.md)
 
 5-10 [瑞典万人抗议以色列参加今年的欧洲歌唱大赛](/articles/dw/1025610.md)
@@ -596,8 +600,4 @@
 4-14 [快时尚法案： 法国再次引领时尚潮流？](/articles/dw/1025905.md)
 
 4-14 [可怕的“小男孩”和“小女孩”——厄尔尼诺和拉尼娜现象](/articles/dw/1025906.md)
-
-4-14 [国际社会谴责伊朗袭击 呼吁避免事态升级](/articles/dw/1025907.md)
-
-4-14 [德国向以色列大屠杀幸存者提供援助金](/articles/dw/1025908.md)
 
