--- a/articles/cdt/340842.md
+++ b/articles/cdt/340842.md
@@ -2,4 +2,4 @@
 [每日一语 2024.5.9](https://chinadigitaltimes.net/chinese/707733.html)
 ------
 
-<p>《国务院新闻办公室网站｜瑞士学者张维为参加圆桌会议（存档）》 <a href="https://web.archive.org/web/20211202050610/http://www.scio.gov.cn/m/ztk/dtzt/41/12/document/799406/799406.htm">https://web.archive.org/web/20211202050610/http://www.scio.gov.cn/m/ztk/dtzt/41/12/document/799406/799406.htm</a> </p><p><img decoding="async" src="https://chinadigitaltimes.net/chinese/files/2024/05/2024.5.9-1.jpg" alt="img"></p><div class="addtoany_share_save_container addtoany_content addtoany_content_bottom"><div class="a2a_kit a2a_kit_size_32 addtoany_list" data-a2a-url="https://chinadigitaltimes.net/chinese/707733.html" data-a2a-title="每日一语 2024.5.9"><a class="a2a_button_facebook" href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F707733.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.5.9" title="Facebook" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_twitter" href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F707733.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.5.9" title="Twitter" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_telegram" href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F707733.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.5.9" title="Telegram" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_reddit" href="https://www.addtoany.com/add_to/reddit?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F707733.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.5.9" title="Reddit" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_whatsapp" href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F707733.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.5.9" title="WhatsApp" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_email" href="https://www.addtoany.com/add_to/email?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F707733.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.5.9" title="Email" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_copy_link" href="https://www.addtoany.com/add_to/copy_link?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F707733.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.5.9" title="Copy Link" rel="nofollow noopener" target="_blank"></a><a class="a2a_dd addtoany_share_save addtoany_share" href="https://www.addtoany.com/share"></a></div></div>
+<p>《国务院新闻办公室网站｜瑞士学者张维为参加圆桌会议（存档）》 <a href="https://web.archive.org/web/20211202050610/http://www.scio.gov.cn/m/ztk/dtzt/41/12/document/799406/799406.htm">https://web.archive.org/web/20211202050610/http://www.scio.gov.cn/m/ztk/dtzt/41/12/document/799406/799406.htm</a> </p><p><img decoding="async" src="https://chinadigitaltimes.net/chinese/files/2024/05/2024.5.9.2.jpg" alt=""></p><div class="addtoany_share_save_container addtoany_content addtoany_content_bottom"><div class="a2a_kit a2a_kit_size_32 addtoany_list" data-a2a-url="https://chinadigitaltimes.net/chinese/707733.html" data-a2a-title="每日一语 2024.5.9"><a class="a2a_button_facebook" href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F707733.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.5.9" title="Facebook" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_twitter" href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F707733.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.5.9" title="Twitter" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_telegram" href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F707733.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.5.9" title="Telegram" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_reddit" href="https://www.addtoany.com/add_to/reddit?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F707733.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.5.9" title="Reddit" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_whatsapp" href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F707733.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.5.9" title="WhatsApp" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_email" href="https://www.addtoany.com/add_to/email?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F707733.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.5.9" title="Email" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_copy_link" href="https://www.addtoany.com/add_to/copy_link?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F707733.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.5.9" title="Copy Link" rel="nofollow noopener" target="_blank"></a><a class="a2a_dd addtoany_share_save addtoany_share" href="https://www.addtoany.com/share"></a></div></div>
