--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-11 [【404文库】川江物语｜公然推广海参崴阅兵游，这样好吗](/articles/cdt/340837.md)
+
 5-11 [每日一语 2024.5.9](/articles/cdt/340842.md)
 
 5-10 [有马体育｜李彦宏甩锅](/articles/cdt/340845.md)
@@ -598,6 +600,4 @@
 4-7 [【404帖子】一小撮人打着反诈旗号，胡作非为，是什么原因？](/articles/cdt/342008.md)
 
 4-7 [【重温】南方周末｜两个男人的20年婚姻](/articles/cdt/342011.md)
-
-4-6 [古老板的老巢｜离境税，荒谬无比的开倒车](/articles/cdt/342015.md)
 
