--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-11 [白宫授权向乌克兰提供4亿美元紧急军援](/articles/voa/1015739.md)
+
 5-11 [联合国大会通过决议，对巴勒斯坦人建国表示支持](/articles/voa/1015740.md)
 
 5-11 [美国务院设“公司”协助友邦抵御中国经济胁迫 分析人士：是经济战，更是政治战](/articles/voa/1015741.md)
@@ -598,6 +600,4 @@
 4-29 [美法外长联袂访中东，力促加沙停火谈判取得进展](/articles/voa/1016037.md)
 
 4-29 [所罗门群岛总理索加瓦雷宣布放弃谋求连任](/articles/voa/1016038.md)
-
-4-29 [中欧关系因经贸纠纷和间谍疑云紧张之际，习近平将出访法国、塞尔维亚和匈牙利](/articles/voa/1016039.md)
 
