--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-11 [关胖本胖｜高铁突然涨价，专家们想要的通胀来了……](/articles/cdt/340827.md)
+
 5-11 [追月数星｜上游新闻被删稿：阜阳多方回应“水泥墩封人”三大疑问](/articles/cdt/340834.md)
 
 5-11 [【404文库】川江物语｜公然推广海参崴阅兵游，这样好吗](/articles/cdt/340837.md)
@@ -598,6 +600,4 @@
 4-7 [每日一语 2024.4.6](/articles/cdt/342004.md)
 
 4-7 [歪脑｜“喝茶”的流行及祛魅：一种克服恐惧的必由之路](/articles/cdt/342006.md)
-
-4-7 [【404帖子】一小撮人打着反诈旗号，胡作非为，是什么原因？](/articles/cdt/342008.md)
 
