--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-11 [CECC年度报告：中国继续系统性地侵犯人权，但民众不满也日益增加](/articles/voa/1015730.md)
+
+5-11 [中国社交媒体上发布无人机拍摄军舰视频后，日本防卫大臣敦促提高安保能力](/articles/voa/1015731.md)
+
 5-11 [国事光析：中国大面积社会溃败的政治根源](/articles/voa/1015732.md)
 
 5-11 [美议员提跨党新法案，授权1.2亿美元支持台湾盟友抗衡中国经济胁迫](/articles/voa/1015733.md)
@@ -596,8 +600,4 @@
 4-30 [中国的习近平在贸易紧张升温时访问欧洲](/articles/voa/1016028.md)
 
 4-30 [布林肯：哈马斯应该接受以色列“极其慷慨”的休战提议](/articles/voa/1016029.md)
-
-4-30 [一对大熊猫将很快启程赴美，在加州圣地亚哥动物园落户](/articles/voa/1016030.md)
-
-4-30 [孙韵: 如何看待布林肯访华](/articles/voa/1016031.md)
 
