--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-11 [每日一语 2024.5.10](/articles/cdt/340820.md)
+
+5-11 [导筒directube｜戛纳主竞赛导演被判八年监禁、鞭刑并没收财产，理由为制作电影危害国家安全](/articles/cdt/340823.md)
+
 5-11 [关胖本胖｜高铁突然涨价，专家们想要的通胀来了……](/articles/cdt/340827.md)
 
 5-11 [追月数星｜上游新闻被删稿：阜阳多方回应“水泥墩封人”三大疑问](/articles/cdt/340834.md)
@@ -596,8 +600,4 @@
 4-7 [网易新闻｜“成都迪士尼”被指扰民现已限流：禁止唱歌但能拍照](/articles/cdt/341998.md)
 
 4-7 [城市的地得｜成都迪士尼，本年度最有趣的发明](/articles/cdt/342001.md)
-
-4-7 [每日一语 2024.4.6](/articles/cdt/342004.md)
-
-4-7 [歪脑｜“喝茶”的流行及祛魅：一种克服恐惧的必由之路](/articles/cdt/342006.md)
 
