--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-11 [朝鲜今年起部署新型多管火箭炮武器系统 宣称战斗力将有“重大变化”](/articles/voa/1015728.md)
+
 5-11 [千呼万唤始出来，加拿大推出外国代理人注册法案](/articles/voa/1015729.md)
 
 5-11 [CECC年度报告：中国继续系统性地侵犯人权，但民众不满也日益增加](/articles/voa/1015730.md)
@@ -598,6 +600,4 @@
 4-30 [美国运动员团体就中国游泳运动员药检事件致函美药物管控主管，呼吁独立调查](/articles/voa/1016026.md)
 
 4-30 [美众院中共问题特设委员会新主席：将继续秉持跨党派精神，“揭露中共所构成的威胁”](/articles/voa/1016027.md)
-
-4-30 [中国的习近平在贸易紧张升温时访问欧洲](/articles/voa/1016028.md)
 
