--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-11 [联大高票通过决议 力挺巴勒斯坦入联](/articles/dw/1025606.md)
+
 5-10 [美国议员推出法案 白宫政府可轻易限制AI模型出口](/articles/dw/1025607.md)
 
 5-10 [德国防长访问美国 将为乌克兰购置三套海马斯](/articles/dw/1025608.md)
@@ -598,6 +600,4 @@
 4-14 [两天经济 一天政治：德国总理肖尔茨二度访华](/articles/dw/1025904.md)
 
 4-14 [快时尚法案： 法国再次引领时尚潮流？](/articles/dw/1025905.md)
-
-4-14 [可怕的“小男孩”和“小女孩”——厄尔尼诺和拉尼娜现象](/articles/dw/1025906.md)
 
