--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-11 [习近平访欧之行破坏了欧洲的团结吗？](/articles/dw/1025601.md)
+
+5-11 [德国海军启程赴印太使命](/articles/dw/1025602.md)
+
 5-11 [以色列参赛惹议 政治味浓厚的欧洲歌唱大赛](/articles/dw/1025603.md)
 
 5-11 [“清洁能源是肮脏谎言”：抗议者反对特斯拉扩建德国工厂](/articles/dw/1025604.md)
@@ -596,8 +600,4 @@
 4-15 [要对话，不要对抗：德国汽车工业反对对中国车征收惩罚性关税](/articles/dw/1025899.md)
 
 4-15 [悉尼行凶者似以女性为目标 一名死者是中国人](/articles/dw/1025900.md)
-
-4-15 [進口中國車大勢所趨 肖爾茨：前提是公平競爭](/articles/dw/1025901.md)
-
-4-15 [蔚來汽車創辦人在美演說 促市場開放](/articles/dw/1025902.md)
 
