--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-11 [菲律宾部署舰船监视中国在萨比纳浅滩可能的填海造陆行动](/articles/voa/1015721.md)
+
 5-11 [两年来首次：俄军在乌克兰东北部越境攻击开辟新战线](/articles/voa/1015722.md)
 
 5-11 [美国再出招封杀华为等中企 观察人士:这一棒“太软”恐无效](/articles/voa/1015723.md)
@@ -598,6 +600,4 @@
 4-30 [路透社：因银行限制，中国公司开始用“地下”渠道从俄罗斯收款](/articles/voa/1016019.md)
 
 4-30 [布林肯离开北京无中国官员送机? 这不是事实！](/articles/voa/1016020.md)
-
-4-30 [美对华政策高官：支持台湾参与国际组织，共同抵制中国曲解联大2758号决议](/articles/voa/1016021.md)
 
