--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-12 [乌克兰东部爆发激烈战斗，俄军称夺取了土地](/articles/voa/1015716.md)
+
 5-12 [以色列再次命令加沙民众撤离拉法，明显准备地面进攻](/articles/voa/1015717.md)
 
 5-12 [中国最新通胀数据显示，通胀通缩并存，经济复苏局面复杂](/articles/voa/1015718.md)
@@ -598,6 +600,4 @@
 4-30 [哈马斯表示正在研议以色列提出的40天停火协议](/articles/voa/1016014.md)
 
 4-30 [欧盟执委会主席候选人辩论 中俄影响力成焦点](/articles/voa/1016015.md)
-
-4-30 [格鲁吉亚反“外国代理人”法案抗议持续数日](/articles/voa/1016016.md)
 
