--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-12 [太阳风暴上演绚丽极光秀，但没有造成严重问题](/articles/voa/1015714.md)
+
+5-12 [台湾新任总统520就职在即 中国社媒炒作陈水扁特赦传闻带风向](/articles/voa/1015715.md)
+
 5-12 [乌克兰东部爆发激烈战斗，俄军称夺取了土地](/articles/voa/1015716.md)
 
 5-12 [以色列再次命令加沙民众撤离拉法，明显准备地面进攻](/articles/voa/1015717.md)
@@ -596,8 +600,4 @@
 4-30 [菲律宾指责中国于争议海域骚扰并损坏菲律宾船只 中国称依法驱离](/articles/voa/1016012.md)
 
 4-30 [亲巴勒斯坦示威持续 哥伦比亚大学祭出停学处分](/articles/voa/1016013.md)
-
-4-30 [哈马斯表示正在研议以色列提出的40天停火协议](/articles/voa/1016014.md)
-
-4-30 [欧盟执委会主席候选人辩论 中俄影响力成焦点](/articles/voa/1016015.md)
 
