--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-12 [每日一语 2024.5.11](/articles/cdt/340791.md)
+
+5-12 [逸洲｜一个新传毕业生的割裂人生](/articles/cdt/340796.md)
+
 5-12 [大爱清尘｜做母亲这条路，对她们来说更难走](/articles/cdt/340798.md)
 
 5-12 [玖奌杂货铺｜数学家丘成桐也被骂成了汉奸公知](/articles/cdt/340800.md)
@@ -596,8 +600,4 @@
 4-8 [建设性意见｜“基本常识”公众号将长期停更](/articles/cdt/341965.md)
 
 4-8 [每日人物｜降价100万，断崖式卖房的人](/articles/cdt/341967.md)
-
-4-8 [槽边往事｜正确地和女性聊天](/articles/cdt/341969.md)
-
-4-8 [正面连接｜我从未告诉你我来自车辆厂](/articles/cdt/341971.md)
 
