--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-12 [中国可能通过从应用程序取得的数据加强海外宣传](/articles/voa/1015707.md)
+
+5-12 [悬缺一年半后 中国驻印度大使徐飞洪履新](/articles/voa/1015708.md)
+
 5-12 [台湾乐团“五月天”假唱疑云澄清 上海文旅局：未发现违法行为](/articles/voa/1015709.md)
 
 5-12 [中国校级军官下周组团访日，重启日中军事交流](/articles/voa/1015710.md)
@@ -596,8 +600,4 @@
 5-1 [中国顶级病毒学家因公布新冠病毒基因组序列而麻烦缠身，如今露宿室外进行抗议](/articles/voa/1016005.md)
 
 4-30 [马斯克取消访印后突访北京令印度感到“震惊”和被“轻慢”](/articles/voa/1016006.md)
-
-4-30 [北京撮合法塔赫与哈马斯谈判，称双方有和解的“政治意愿”](/articles/voa/1016007.md)
-
-4-30 [中共七月召开二十届三中全会，称要深化改革以应对经济挑战](/articles/voa/1016008.md)
 
