--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-13 [每日一语 2024.5.12](/articles/cdt/340780.md)
+
 5-12 [每日一语 2024.5.11](/articles/cdt/340791.md)
 
 5-12 [青年志Youthology｜当一位女性决定反击性骚扰](/articles/cdt/340793.md)
@@ -598,6 +600,4 @@
 4-8 [每日一语 2024.4.7](/articles/cdt/341952.md)
 
 4-8 [南风窗｜16次抽血浆的男孩，倒在春天来临前](/articles/cdt/341958.md)
-
-4-8 [衣者褚｜清明回乡有感：耕地下遍布暗堡的未来](/articles/cdt/341960.md)
 
