--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,10 @@
 
 5-13 [每日一语 2024.5.12](/articles/cdt/340780.md)
 
+5-13 [澎湃人物｜梅大高速涉事边坡：脆弱地带与养护之困](/articles/cdt/340782.md)
+
+5-13 [建设性意见｜我代表自己同意广州自来水涨价，但是得先谈条件](/articles/cdt/340783.md)
+
 5-12 [每日一语 2024.5.11](/articles/cdt/340791.md)
 
 5-12 [青年志Youthology｜当一位女性决定反击性骚扰](/articles/cdt/340793.md)
@@ -596,8 +600,4 @@
 4-9 [三联生活周刊｜带妹妹逃婚，一个姐姐的征途](/articles/cdt/341946.md)
 
 4-9 [晚点LatePost｜被竞业之后，把工资加倍还给前公司的人](/articles/cdt/341950.md)
-
-4-8 [每日一语 2024.4.7](/articles/cdt/341952.md)
-
-4-8 [南风窗｜16次抽血浆的男孩，倒在春天来临前](/articles/cdt/341958.md)
 
