--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-13 [习近平结束访欧：收获友情，但恐难彻底打消欧洲对华疑虑](/articles/nyt/1042781.md)
+
 5-10 [中国富豪承认提供非法政治捐款，将放弃绿卡离开美国](/articles/nyt/1042782.md)
 
 5-10 [欧洲住房危机蔓延，“黄金签证”走向终结](/articles/nyt/1042783.md)
@@ -598,6 +600,4 @@
 1-30 [“美国正受到攻击”：反DEI运动在反对些什么](/articles/nyt/1043079.md)
 
 1-30 [耗尽积蓄、无薪实习：中国年轻人找工作有多难](/articles/nyt/1043080.md)
-
-1-30 [恒大被勒令清盘，接下来会发生什么](/articles/nyt/1043081.md)
 
