--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,20 @@
 美国之音
 ------
 
+5-14 [过境口岸关闭，加沙人道援助停止分发](/articles/voa/1015664.md)
+
+5-14 [台湾新总统上任后台海前景如何？台驻美代表：赖清德会负责任，不会正式宣布独立](/articles/voa/1015665.md)
+
+5-14 [华北雁塘：失去法国？中国首脑外交在欧洲的失败](/articles/voa/1015666.md)
+
+5-14 [俄罗斯在乌克兰扩大战线，白宫表示正尽一切可能向乌军急运武器](/articles/voa/1015667.md)
+
+5-14 [拜登总统下令禁止一家中国支持的加密币挖矿公司拥有怀俄明军事基地附近土地](/articles/voa/1015668.md)
+
+5-14 [耶伦：中国有可能对美国加征关税做出“重大”回应](/articles/voa/1015669.md)
+
+5-14 [普京将再度访华，中俄轴心结构已经成形？](/articles/voa/1015670.md)
+
 5-14 [中国“海鸥”小型电动车对美国汽车业构成巨大威胁](/articles/voa/1015671.md)
 
 5-14 [巴控克什米尔暴力抗议，巴基斯坦宣布资助并派兵](/articles/voa/1015672.md)
@@ -586,18 +600,4 @@
 5-2 [美国指控俄罗斯对乌克兰使用化学武器](/articles/voa/1015962.md)
 
 5-2 [美国大学反加萨战争抗议潮方兴未艾 警方清场或采取更多行动](/articles/voa/1015963.md)
-
-5-2 [所罗门前外长马内莱当选新总理 将延续亲中路线](/articles/voa/1015964.md)
-
-5-2 [墨西哥加关税应对中国商品倾销顺势带动近岸外包](/articles/voa/1015965.md)
-
-5-2 [共和党议员将访台参加总统就职，美国务院官员：密切关注中国行动](/articles/voa/1015966.md)
-
-5-2 [美国反兴奋剂机构批评世界反兴奋剂机构在中国游泳运动员药检问题上“变本加厉”地回避全部真相](/articles/voa/1015967.md)
-
-5-2 [布林肯会见内塔尼亚胡，再次推动加沙停火](/articles/voa/1015968.md)
-
-5-2 [美国官员：将扩大国际伙伴对台湾参与世卫大会的支持](/articles/voa/1015969.md)
-
-5-2 [美国各地大学校园因加沙战争而发生更多动荡](/articles/voa/1015970.md)
 
