--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-14 [英国首相在选前演讲中警告“威权国家轴心”带来的威胁](/articles/voa/1015661.md)
+
+5-14 [普京换防长：为一场长期战争做准备？](/articles/voa/1015662.md)
+
+5-14 [众院中共问题特设委员会主席与几位议员致函华盛顿市长，呼吁首都与台北结成姐妹市](/articles/voa/1015663.md)
+
 5-14 [过境口岸关闭，加沙人道援助停止分发](/articles/voa/1015664.md)
 
 5-14 [台湾新总统上任后台海前景如何？台驻美代表：赖清德会负责任，不会正式宣布独立](/articles/voa/1015665.md)
@@ -594,10 +600,4 @@
 5-2 [菲律宾召见中国使馆二号官员，抗议高压水炮攻击菲船](/articles/voa/1015959.md)
 
 5-2 [美高官将在夏威夷会见印太关键安全合作伙伴](/articles/voa/1015960.md)
-
-5-2 [联合国小组解散 美与友邦50国拟另设机构监督对朝制裁](/articles/voa/1015961.md)
-
-5-2 [美国指控俄罗斯对乌克兰使用化学武器](/articles/voa/1015962.md)
-
-5-2 [美国大学反加萨战争抗议潮方兴未艾 警方清场或采取更多行动](/articles/voa/1015963.md)
 
