--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-14 [世界反兴奋剂机构本周将就中国游泳运动员药检问题召开特别会议](/articles/voa/1015660.md)
+
 5-14 [英国首相在选前演讲中警告“威权国家轴心”带来的威胁](/articles/voa/1015661.md)
 
 5-14 [普京换防长：为一场长期战争做准备？](/articles/voa/1015662.md)
@@ -598,6 +600,4 @@
 5-2 [港府切断资助 香港剧协坚持举办颁奖礼](/articles/voa/1015958.md)
 
 5-2 [菲律宾召见中国使馆二号官员，抗议高压水炮攻击菲船](/articles/voa/1015959.md)
-
-5-2 [美高官将在夏威夷会见印太关键安全合作伙伴](/articles/voa/1015960.md)
 
