--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-14 [作自己的事业：梅琳达辞去盖茨基金会职务](/articles/dw/1025569.md)
+
 5-14 [进不去门了！德中资公司罢工员工遭停工](/articles/dw/1025570.md)
 
 5-14 [美台海軍太平洋「不期而遇」 雙邊低調演習](/articles/dw/1025571.md)
@@ -598,6 +600,4 @@
 4-18 [德国副总理哈贝克突访乌克兰](/articles/dw/1025867.md)
 
 4-18 [数百中国人买签证“移民”德国 警方称或被遣返](/articles/dw/1025868.md)
-
-4-18 [越南反腐运动是否搞得过头了？](/articles/dw/1025869.md)
 
