--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-14 [中澳关系回暖乏力，澳洲航空7月将暂停飞往上海的航班服务](/articles/voa/1015655.md)
+
+5-14 [英国起诉香港驻伦敦经贸办职员等三人 李家超驳称不接受“无理指控”](/articles/voa/1015656.md)
+
 5-14 [中韩外长会谈，王毅呼吁稳定双边“困难”的关系](/articles/voa/1015657.md)
 
 5-14 [布林肯突然造访乌克兰 在俄罗斯扩大战线之际巩固安全承诺](/articles/voa/1015658.md)
@@ -596,8 +600,4 @@
 5-3 [韩国提升五驻外使领馆警戒级别，严防朝鲜特工恐袭](/articles/voa/1015953.md)
 
 5-2 [欧盟：中国电动车反补贴调查正在推进，加征关税可能近期启动](/articles/voa/1015954.md)
-
-5-2 [警察在加州大学洛杉矶分校等大学清理抗议营地，逮捕多人](/articles/voa/1015955.md)
-
-5-2 [美官员敦促俄中效仿美英法，承诺永远不让人工智能控制核武器](/articles/voa/1015956.md)
 
