--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,7 +3,13 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-15 [劳务宏观笔记｜农民工监测数据解读之二：制造业和建筑业农民工收入增速创历年最低](/articles/cdt/340701.md)
+
+5-15 [旧闻评论｜椰树广告、歌手请战与水电涨价 | 舆论手札](/articles/cdt/340704.md)
+
 5-15 [每日一语 2024.5.14](/articles/cdt/340707.md)
+
+5-15 [【404文库】“随着车的撞击和爆炸，道路在继续崩塌，深坑越变越宽”（外二篇）](/articles/cdt/340709.md)
 
 5-14 [天下说法｜垂帘听审，正在没羞没臊地摧毁二审终审制度](/articles/cdt/340715.md)
 
@@ -594,10 +600,4 @@
 4-11 [极昼工作室｜整顿“粉红税”这件小事](/articles/cdt/341828.md)
 
 4-11 [声道｜刷新下限的一幕：车企大佬公然歌颂苦难](/articles/cdt/341830.md)
-
-4-11 [【麻辣总局】“这种玩意儿，要么是间谍，要么是日本人”](/articles/cdt/341836.md)
-
-4-11 [极昼工作室｜整顿“粉红税”这件小事](/articles/cdt/341840.md)
-
-4-11 [阿斗凿墙｜高耀洁奶奶去世四个月了，我们没有忘记您](/articles/cdt/341843.md)
 
