--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 5-15 [劳务宏观笔记｜农民工监测数据解读之二：制造业和建筑业农民工收入增速创历年最低](/articles/cdt/340701.md)
 
+5-15 [一席｜读书能够改变命运吗？我不知道，但我只有这一条路了｜谢爱磊 一席第1059位讲者](/articles/cdt/340702.md)
+
 5-15 [旧闻评论｜椰树广告、歌手请战与水电涨价 | 舆论手札](/articles/cdt/340704.md)
 
 5-15 [每日一语 2024.5.14](/articles/cdt/340707.md)
@@ -598,6 +600,4 @@
 4-11 [每日一语 2024.4.10](/articles/cdt/341825.md)
 
 4-11 [极昼工作室｜整顿“粉红税”这件小事](/articles/cdt/341828.md)
-
-4-11 [声道｜刷新下限的一幕：车企大佬公然歌颂苦难](/articles/cdt/341830.md)
 
