--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-15 [中国是如何在汽车和太阳能电池板领域引领世界的](/articles/nyt/1042770.md)
+
 5-15 [普京将再次访华，中俄“没有止境”的伙伴关系面临考验](/articles/nyt/1042771.md)
 
 5-14 [美国患上了“中国焦虑症”](/articles/nyt/1042772.md)
@@ -598,6 +600,4 @@
 2-2 [为何大批移民选择“走线”赴美自首：他们相信自己能留下](/articles/nyt/1043068.md)
 
 2-2 [韩国第一夫人收赠迪奥手袋丑闻引发政坛震荡](/articles/nyt/1043069.md)
-
-2-1 [全球生育率下降，少子化危机何解？](/articles/nyt/1043070.md)
 
