--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-15 [英国外交部召见中国大使，就香港情报部门活动作出谴责](/articles/nyt/1042769.md)
+
 5-15 [中国是如何在汽车和太阳能电池板领域引领世界的](/articles/nyt/1042770.md)
 
 5-15 [普京将再次访华，中俄“没有止境”的伙伴关系面临考验](/articles/nyt/1042771.md)
@@ -598,6 +600,4 @@
 2-2 [从地中海到波斯湾，伊朗为何卷入中东地区多场冲突](/articles/nyt/1043067.md)
 
 2-2 [为何大批移民选择“走线”赴美自首：他们相信自己能留下](/articles/nyt/1043068.md)
-
-2-2 [韩国第一夫人收赠迪奥手袋丑闻引发政坛震荡](/articles/nyt/1043069.md)
 
