--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-15 [中国非法捕鱼让肯尼亚和塞内加尔手工捕捞渔民陷入困境](/articles/voa/1015628.md)
+
 5-15 [布林肯在访问基辅时重申美国对乌克兰的支持](/articles/voa/1015629.md)
 
 5-15 [美中举行首次政府间人工智能对话，为何外界期望值不高](/articles/voa/1015630.md)
@@ -598,6 +600,4 @@
 5-3 [日法同意启动军队《相互准入协议》谈判，扩大安全网建构](/articles/voa/1015926.md)
 
 5-3 [香港基本法23条后又一外媒撤离《华尔街日报》亚洲总部迁往新加坡](/articles/voa/1015927.md)
-
-5-3 [中国威胁日益严重下 奥斯汀与澳日菲防长会面 批评中国在南中国海的“不负责任行为](/articles/voa/1015928.md)
 
