--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-15 [美国拟向以色列提供新一笔10亿美元武器，已交付国会审核](/articles/voa/1015624.md)
+
 5-15 [批评但服从香港法庭裁决 Youtube即日起在境内屏蔽《愿荣光归香港》视频](/articles/voa/1015625.md)
 
 5-15 [菲律宾民间船只航向争议海域，南中国海局势继续紧张](/articles/voa/1015626.md)
@@ -598,6 +600,4 @@
 5-3 [最新台湾新闻自由度排名上升8位，名列全球第27名](/articles/voa/1015922.md)
 
 5-3 [美国两党议员发声明批评北京压制新闻自由，向敢于抗争的人们致敬](/articles/voa/1015923.md)
-
-5-3 [尼日尔军政府下逐客令后，美军后脚未离，俄军前脚已至](/articles/voa/1015924.md)
 
