--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,14 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-15 [历史研习社｜林则徐在新疆的另一面](/articles/cdt/340684.md)
+
+5-15 [剥洋葱People｜南京林业大学青年教师自杀，校方否认“非升即走”](/articles/cdt/340687.md)
+
+5-15 [特正经的张某某｜赵菊英符合我对最糟糕教师同行的全部想象](/articles/cdt/340689.md)
+
+5-15 [关胖本胖｜放任民粹回潮，中国大厂难有未来！](/articles/cdt/340691.md)
+
 5-15 [风慢慢｜官方《情况通报》，正成为知法违法的遮羞布](/articles/cdt/340695.md)
 
 5-15 [贝壳财经｜居民用电涨价”被辟谣背后，谁来决定电价](/articles/cdt/340698.md)
@@ -592,12 +600,4 @@
 4-12 [冰点周刊｜七个“硬石头”无罪](/articles/cdt/341811.md)
 
 4-12 [维舟｜对信众来说，批评是不可能的](/articles/cdt/341813.md)
-
-4-12 [旧闻评论｜成都迪士尼：年轻废材的又一次集结号](/articles/cdt/341815.md)
-
-4-12 [每日一语 2024.4.11](/articles/cdt/341817.md)
-
-4-12 [极昼工作室｜断缴医保后，年轻人走进「假装上班协会」](/articles/cdt/341819.md)
-
-4-11 [麦杰逊｜“我头一次听人在发布会上说自己违反劳动法”](/articles/cdt/341821.md)
 
